--- a/app/front/customer/take_away_confirmation.html
+++ b/app/front/customer/take_away_confirmation.html
@@ -132,16 +132,15 @@
         </div>
         <div class="hidden md:flex flex-1 justify-end gap-8">
           <div class="flex items-center gap-9">
-            <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary" href="#">Home</a>
-            <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary" href="#">Menu</a>
-            <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary" href="#">About
-              Us</a>
+            <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary" href="#">Inicio</a>
+            <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary" href="#">Menú</a>
+            <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary" href="#">Sobre Nosotros</a>
             <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary"
-              href="#">Contact</a>
+              href="#">Contacto</a>
           </div>
           <button
             class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-primary text-white text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary-dark">
-            <span class="truncate">My Account</span>
+            <span class="truncate">Mi Cuenta</span>
           </button>
         </div>
       </header>
@@ -152,33 +151,31 @@
               <span class="material-symbols-outlined !text-5xl">takeout_dining</span>
             </div>
             <div class="flex flex-col gap-3">
-              <p class="text-4xl font-black leading-tight tracking-[-0.033em] text-text-primary">Your Take-Away Order is
-                Confirmed!</p>
-              <p class="text-base font-normal leading-normal text-text-secondary">Thank you, Alex. We've sent a
-                confirmation email to alex.doe@email.com.</p>
+              <p class="text-4xl font-black leading-tight tracking-[-0.033em] text-text-primary">¡Tu Pedido Para Llevar está Confirmado!</p>
+              <p class="text-base font-normal leading-normal text-text-secondary">Gracias, Alex. Hemos enviado un correo de confirmación a alex.doe@email.com.</p>
             </div>
           </div>
           <div class="w-full rounded-xl border border-border-color bg-white p-6 sm:p-8">
             <div class="grid grid-cols-[auto_1fr] gap-x-6">
               <div class="col-span-2 grid grid-cols-subgrid border-b border-b-border-color pb-5">
-                <p class="text-sm font-normal leading-normal text-text-secondary">Order Type</p>
-                <p class="text-sm font-medium leading-normal text-text-primary text-right sm:text-left">Take-Away</p>
+                <p class="text-sm font-normal leading-normal text-text-secondary">Tipo de Pedido</p>
+                <p class="text-sm font-medium leading-normal text-text-primary text-right sm:text-left">Para Llevar</p>
               </div>
               <div class="col-span-2 grid grid-cols-subgrid border-b border-b-border-color py-5">
-                <p class="text-sm font-normal leading-normal text-text-secondary">Ready for pickup at</p>
+                <p class="text-sm font-normal leading-normal text-text-secondary">Listo para recoger a las</p>
                 <p class="text-sm font-medium leading-normal text-text-primary text-right sm:text-left">7:30 PM</p>
               </div>
               <div class="col-span-2 grid grid-cols-subgrid border-b border-b-border-color py-5">
-                <p class="text-sm font-normal leading-normal text-text-secondary">Customer Name</p>
+                <p class="text-sm font-normal leading-normal text-text-secondary">Nombre del Cliente</p>
                 <p class="text-sm font-medium leading-normal text-text-primary text-right sm:text-left">Alex Doe</p>
               </div>
               <div class="col-span-2 grid grid-cols-subgrid border-b border-b-border-color py-5">
-                <p class="text-sm font-normal leading-normal text-text-secondary">Pickup Address</p>
+                <p class="text-sm font-normal leading-normal text-text-secondary">Dirección de Recogida</p>
                 <p class="text-sm font-medium leading-normal text-text-primary text-right sm:text-left">123 Cheese Lane,
                   Foodie Town, 12345</p>
               </div>
               <div class="col-span-2 grid grid-cols-subgrid pt-5">
-                <p class="text-sm font-normal leading-normal text-text-secondary">Order ID</p>
+                <p class="text-sm font-normal leading-normal text-text-secondary">ID del Pedido</p>
                 <p class="text-sm font-medium leading-normal text-text-primary text-right sm:text-left">CHD-8675309</p>
               </div>
             </div>
@@ -186,12 +183,12 @@
           <div class="flex w-full flex-col sm:flex-row-reverse items-center justify-center gap-4 pt-4">
             <button
               class="flex w-full sm:w-auto min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-primary text-white text-base font-bold leading-normal tracking-[0.015em] grow sm:grow-0 hover:bg-primary-dark">
-              <span class="truncate">Back to Homepage</span>
+              <span class="truncate">Volver al Inicio</span>
             </button>
             <button
               class="flex w-full sm:w-auto min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-transparent text-primary-dark hover:bg-primary-light text-base font-bold leading-normal tracking-[0.015em] grow sm:grow-0 gap-2 border-2 border-primary hover:border-primary-dark">
               <span class="material-symbols-outlined" data-icon="receipt_long">receipt_long</span>
-              <span class="truncate">View Order Details</span>
+              <span class="truncate">Ver Detalles del Pedido</span>
             </button>
           </div>
         </div>
@@ -201,7 +198,7 @@
 
   <div class="fixed bottom-4 right-4 z-50">
     <button id="accessibility-trigger" type="button" aria-controls="accessibility-menu" aria-expanded="false"
-      aria-label="Open Accessibility Options"
+      aria-label="Abrir Opciones de Accesibilidad"
       class="flex h-14 w-14 items-center justify-center rounded-full bg-primary text-text-light shadow-lg transition-transform hover:scale-110 focus:outline-none focus:ring-4 focus:ring-primary/50">
       <span class="material-symbols-outlined !text-3xl">accessibility_new</span>
     </button>
@@ -211,14 +208,13 @@
 
       <div class="border-b border-border-light pb-2 mb-4 dark:border-border-dark">
         <h3 id="accessibility-heading" class="text-lg font-bold text-text-light dark:text-text-dark">
-          Accessibility Settings
+          Configuración de Accesibilidad
         </h3>
       </div>
 
-      <div class="space-y-4 h-80 overflow-y-auto pr-1 custom-scrollbar">
+      <div class="p-4 space-y-4 h-80 overflow-y-auto pr-1 custom-scrollbar">
         <div class="space-y-2">
-          <label class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark" for="font-size">Text
-            Size</label>
+          <label class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark" for="font-size">Tamaño del Texto</label>
           <div class="flex items-center gap-2">
             <span class="text-xs text-text-muted-light dark:text-text-muted-dark">A</span>
             <input id="font-size" type="range" min="100" max="180" step="10" value="100"
@@ -228,30 +224,30 @@
         </div>
 
         <div class="space-y-2">
-          <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Contrast Theme</p>
+          <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Tema de Contraste</p>
           <div class="grid grid-cols-4 gap-2">
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-white" data-contrast="black-on-white"
-              data-fg="#000000" data-bg="#ffffff" title="Black on White"
-              aria-label="Black text on White background"></button>
+              data-fg="#000000" data-bg="#ffffff" title="Negro sobre Blanco"
+              aria-label="Texto negro sobre fondo blanco"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-black" data-contrast="white-on-black"
-              data-fg="#ffffff" data-bg="#000000" title="White on Black"
-              aria-label="White text on Black background"></button>
+              data-fg="#ffffff" data-bg="#000000" title="Blanco sobre Negro"
+              aria-label="Texto blanco sobre fondo negro"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-yellow-400" data-contrast="yellow-on-blue"
-              data-fg="#facc15" data-bg="#020617" title="Yellow on Blue"
-              aria-label="Yellow text on Dark Blue background"></button>
+              data-fg="#facc15" data-bg="#020617" title="Amarillo sobre Azul"
+              aria-label="Texto amarillo sobre fondo azul oscuro"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-blue-600" data-contrast="blue-on-white"
-              data-fg="#2563eb" data-bg="#ffffff" title="Blue on White"
-              aria-label="Blue text on White background"></button>
+              data-fg="#2563eb" data-bg="#ffffff" title="Azul sobre Blanco"
+              aria-label="Texto azul sobre fondo blanco"></button>
           </div>
         </div>
 
         <div class="space-y-3 pt-2 border-t border-border-light dark:border-border-dark">
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Grayscale</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Escala de Grises</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="grayscale-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -260,7 +256,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Text Spacing</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Espaciado de Texto</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="spacing-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -269,7 +265,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Dyslexia Font</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Fuente para Dislexia</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="dyslexia-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -278,7 +274,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Big Cursor</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Cursor Grande</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="cursor-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -287,7 +283,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Highlight Links</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Resaltar Enlaces</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="links-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -296,7 +292,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Reading Guide</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Guía de Lectura</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="reading-guide-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -305,7 +301,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Pause Animations</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Pausar Animaciones</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="animation-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -319,7 +315,7 @@
       <div class="mt-4 border-t border-border-light pt-3 dark:border-border-dark">
         <button id="a11y-reset"
           class="w-full text-center text-sm font-bold text-primary hover:text-primary-dark hover:underline">
-          Reset Settings
+          Restablecer Configuración
         </button>
       </div>
     </div>
@@ -329,10 +325,12 @@
 
 
   <script>
-    // popup.js inline - temporal para debugging
+    // popup.js inline - temporary for debugging
+    // This script creates a simple modal to inform the user that a feature is not yet implemented.
     (function () {
-      console.log('✅ Script inline cargado');
+      console.log('✅ Inline script loaded');
 
+      // Create style element for modal
       const style = document.createElement('style');
       style.textContent = `
     .__notimpl_modal_backdrop {
@@ -379,23 +377,29 @@
   `;
       document.head.appendChild(style);
 
+      // Function to show the modal
       function showModal() {
-        console.log('🎉 Mostrando modal');
+        console.log('🎉 Showing modal');
         if (document.querySelector('.__notimpl_modal_backdrop')) return;
 
+        // Create backdrop
         const backdrop = document.createElement('div');
         backdrop.className = '__notimpl_modal_backdrop';
 
+        // Create modal content
         const modal = document.createElement('div');
         modal.className = '__notimpl_modal';
-        modal.innerHTML = '<h2>Not implemented yet!</h2><p>This functionality is not implemented yet.</p>';
+        modal.innerHTML = '<h2>¡Aún no implementado!</h2><p>Esta funcionalidad aún no está implementada.</p>';
 
+        // Create close button
         const closeBtn = document.createElement('button');
         closeBtn.textContent = 'Cerrar';
         closeBtn.addEventListener('click', () => backdrop.remove());
 
         modal.appendChild(closeBtn);
         backdrop.appendChild(modal);
+        
+        // Close on click outside
         backdrop.addEventListener('click', (e) => {
           if (e.target === backdrop) backdrop.remove();
         });
@@ -403,24 +407,27 @@
         document.body.appendChild(backdrop);
       }
 
+      // Event listener for clicks
       document.addEventListener('click', function (e) {
-        console.log('👆 Clic en:', e.target.tagName);
+        console.log('👆 Click on:', e.target.tagName);
         const target = e.target.closest('[data-not-implemented]');
         console.log('🔍 Target:', target);
 
         if (target) {
-          console.log('✋ Previniendo default');
+          console.log('✋ Preventing default');
           e.preventDefault();
           e.stopPropagation();
           showModal();
         }
       }, true);
 
-      console.log('✅ Event listener configurado');
+      console.log('✅ Event listener configured');
     })();
 
     // ===== ACCESSIBILITY PANEL LOGIC =====
+    // This script manages the accessibility settings including font size, contrast, and other visual aids.
     (function () {
+      // Keys for local storage to persist settings
       const KEY_SIZE = 'a11y_font';
       const KEY_FG = 'a11y_fg';
       const KEY_BG = 'a11y_bg';
@@ -433,6 +440,7 @@
       const KEY_GUIDE = 'a11y_guide';
       const KEY_PAUSE = 'a11y_pause';
 
+      // DOM Elements
       const trigger = document.getElementById('accessibility-trigger');
       const menu = document.getElementById('accessibility-menu');
 
@@ -450,6 +458,7 @@
       const readingGuide = document.getElementById('a11y-reading-guide');
 
       // --- Reading Guide Follow Logic ---
+      // Updates the position of the reading guide bar based on mouse movement
       document.addEventListener('mousemove', (e) => {
         if (document.body.classList.contains('a11y-reading-guide')) {
           readingGuide.style.top = e.clientY + 'px';
@@ -457,6 +466,7 @@
       });
 
       // --- Toggle panel visibility ---
+      // Opens or closes the accessibility menu
       if (trigger && menu) {
         trigger.addEventListener('click', () => {
           const isHidden = menu.classList.contains('hidden');
@@ -466,9 +476,11 @@
       }
 
       // --- Apply settings on load ---
+      // Restore saved settings from local storage
       applyInitialSettings();
 
       // --- Font size (100–180%) ---
+      // Updates the root font size based on slider input
       if (sizeSlider) {
         sizeSlider.addEventListener('input', (e) => {
           const value = e.target.value;
@@ -478,6 +490,7 @@
       }
 
       // --- High contrast presets ---
+      // Sets the high contrast theme based on selected button
       contrastButtons.forEach((btn) => {
         btn.addEventListener('click', () => {
           const fg = btn.dataset.fg;
@@ -486,6 +499,7 @@
         });
       });
 
+      // Helper function to apply high contrast colors
       function setHighContrast(fg, bg) {
         if (fg) {
           document.documentElement.style.setProperty('--a11y-fg', fg);
@@ -500,6 +514,7 @@
       }
 
       // --- Generic Toggle Handler ---
+      // Helper to handle checkbox toggles for various accessibility features
       function setupToggle(el, cls, key) {
         if (!el) return;
         el.addEventListener('change', () => {
@@ -513,6 +528,7 @@
         });
       }
 
+      // Setup event listeners for each toggle
       setupToggle(dyslexiaToggle, 'a11y-dyslexia-font', KEY_DYS);
       setupToggle(cursorToggle, 'a11y-cursor-big', KEY_CURSOR);
       setupToggle(linksToggle, 'a11y-highlight-links', KEY_LINKS);
@@ -522,6 +538,7 @@
       setupToggle(animationToggle, 'a11y-paused', KEY_PAUSE);
 
       // --- Reset ---
+      // Resets all accessibility settings to default
       if (resetBtn) {
         resetBtn.addEventListener('click', (e) => {
           e.preventDefault();
@@ -552,6 +569,7 @@
         });
       }
 
+      // Function to load and apply settings from local storage
       function applyInitialSettings() {
         const loadState = (key, cls, input) => {
           if (localStorage.getItem(key) === '1') {
