--- a/app/front/register.html
+++ b/app/front/register.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html class="" lang="en">
+<html class="" lang="es">
 
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Register - Cheesy Dreams</title>
+    <title>Registrarse - Cheesy Dreams</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;900&amp;display=swap"
         rel="stylesheet" />
@@ -138,17 +138,17 @@
                 <div class="w-full max-w-md space-y-8">
                     <div class="text-center">
                         <h1 class="text-4xl font-black leading-tight tracking-[-0.033em] text-text-primary">
-                            Create Account
+                            Crear Cuenta
                         </h1>
                         <p class="mt-2 text-base font-normal leading-normal text-text-secondary">
-                            Please fill in the details to create your account
+                            Por favor, complete los detalles para crear su cuenta
                         </p>
                     </div>
                     <form action="{{ url_for('register') }}" class="space-y-6" method="POST">
                         <div class="space-y-4">
                             <div>
                                 <label class="block text-sm font-medium leading-6 text-text-primary"
-                                    for="email">Username or Email</label>
+                                    for="email">Usuario o Correo Electrónico</label>
                                 <div class="mt-2">
                                     <input autocomplete="email"
                                         class="block w-full rounded-lg border-0 py-3 text-text-primary shadow-sm ring-1 ring-inset ring-border-color placeholder:text-text-secondary focus:ring-2 focus:ring-inset focus:ring-primary-dark sm:text-sm sm:leading-6"
@@ -157,7 +157,7 @@
                             </div>
                             <div>
                                 <label class="block text-sm font-medium leading-6 text-text-primary"
-                                    for="password">Password</label>
+                                    for="password">Contraseña</label>
                                 <div class="mt-2">
                                     <input autocomplete="new-password"
                                         class="block w-full rounded-lg border-0 py-3 text-text-primary shadow-sm ring-1 ring-inset ring-border-color placeholder:text-text-secondary focus:ring-2 focus:ring-inset focus:ring-primary-dark sm:text-sm sm:leading-6"
@@ -166,28 +166,28 @@
                             </div>
                             <div>
                                 <label class="block text-sm font-medium leading-6 text-text-primary"
-                                    for="user-type">User Type</label>
+                                    for="user-type">Tipo de Usuario</label>
                                 <div class="mt-2 relative">
                                     <select
                                         class="block w-full appearance-none rounded-lg border-0 py-3 pl-3 pr-10 text-text-primary shadow-sm ring-1 ring-inset ring-border-color focus:ring-2 focus:ring-inset focus:ring-primary-dark sm:text-sm sm:leading-6"
                                         id="user-type" name="user-type" required>
-                                        <option value="" disabled selected>Select user type</option>
-                                        <option value="Staff">Staff</option>
-                                        <option value="Customer">Customer</option>
+                                        <option value="" disabled selected>Seleccionar tipo de usuario</option>
+                                        <option value="Staff">Personal</option>
+                                        <option value="Customer">Cliente</option>
                                     </select>
                                 </div>
                             </div>
                             <div>
-                                <p>Already have an account?
+                                <p>¿Ya tienes una cuenta?
                                     <a class="font-semibold text-primary hover:text-primary-dark"
-                                        href="{{ url_for('login') }}">Log in here</a>
+                                        href="{{ url_for('login') }}">Inicia sesión aquí</a>
                                 </p>
                             </div>
                         </div>
                         <div>
                             <button
                                 class="flex w-full justify-center rounded-lg bg-primary px-4 py-3 text-base font-bold leading-normal text-white shadow-sm hover:bg-primary-dark focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-dark"
-                                type="submit">Create Account</button>
+                                type="submit">Crear Cuenta</button>
                         </div>
                     </form>
                     {% if error_message %}
@@ -208,14 +208,13 @@
 
                 <div class="border-b border-gray-200 pb-2 mb-4 dark:border-gray-700">
                     <h3 id="accessibility-heading" class="text-lg font-bold text-gray-900 dark:text-white">
-                        Accessibility Settings
+                        Configuración de Accesibilidad
                     </h3>
                 </div>
 
                 <div class="space-y-4 h-80 overflow-y-auto pr-1 custom-scrollbar">
                     <div class="space-y-2">
-                        <label class="text-sm font-medium text-gray-600 dark:text-gray-400" for="font-size">Text
-                            Size</label>
+                        <label class="text-sm font-medium text-gray-600 dark:text-gray-400" for="font-size">Tamaño del Texto</label>
                         <div class="flex items-center gap-2">
                             <span class="text-xs text-gray-600 dark:text-gray-400">A</span>
                             <input id="font-size" type="range" min="100" max="180" step="10" value="100"
@@ -225,7 +224,7 @@
                     </div>
 
                     <div class="space-y-2">
-                        <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Contrast Theme</p>
+                        <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Tema de Contraste</p>
                         <div class="grid grid-cols-4 gap-2">
                             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-white"
                                 data-contrast="black-on-white" data-fg="#000000" data-bg="#ffffff"
@@ -248,7 +247,7 @@
                     <div class="space-y-3 pt-2 border-t border-gray-200 dark:border-gray-700">
 
                         <div class="flex items-center justify-between">
-                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Grayscale</p>
+                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Escala de Grises</p>
                             <label class="inline-flex items-center gap-2 cursor-pointer">
                                 <input id="grayscale-toggle" type="checkbox"
                                     class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -257,7 +256,7 @@
                         </div>
 
                         <div class="flex items-center justify-between">
-                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Text Spacing</p>
+                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Espaciado de Texto</p>
                             <label class="inline-flex items-center gap-2 cursor-pointer">
                                 <input id="spacing-toggle" type="checkbox"
                                     class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -266,7 +265,7 @@
                         </div>
 
                         <div class="flex items-center justify-between">
-                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Dyslexia Font</p>
+                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Fuente para Dislexia</p>
                             <label class="inline-flex items-center gap-2 cursor-pointer">
                                 <input id="dyslexia-toggle" type="checkbox"
                                     class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -275,7 +274,7 @@
                         </div>
 
                         <div class="flex items-center justify-between">
-                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Big Cursor</p>
+                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Cursor Grande</p>
                             <label class="inline-flex items-center gap-2 cursor-pointer">
                                 <input id="cursor-toggle" type="checkbox"
                                     class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -284,7 +283,7 @@
                         </div>
 
                         <div class="flex items-center justify-between">
-                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Highlight Links</p>
+                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Resaltar Enlaces</p>
                             <label class="inline-flex items-center gap-2 cursor-pointer">
                                 <input id="links-toggle" type="checkbox"
                                     class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -293,7 +292,7 @@
                         </div>
 
                         <div class="flex items-center justify-between">
-                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Reading Guide</p>
+                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Guía de Lectura</p>
                             <label class="inline-flex items-center gap-2 cursor-pointer">
                                 <input id="reading-guide-toggle" type="checkbox"
                                     class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -302,7 +301,7 @@
                         </div>
 
                         <div class="flex items-center justify-between">
-                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Pause Animations</p>
+                            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Pausar Animaciones</p>
                             <label class="inline-flex items-center gap-2 cursor-pointer">
                                 <input id="animation-toggle" type="checkbox"
                                     class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -316,7 +315,7 @@
                 <div class="mt-4 border-t border-gray-200 pt-3 dark:border-gray-700">
                     <button id="a11y-reset"
                         class="w-full text-center text-sm font-bold text-primary hover:text-yellow-600 hover:underline">
-                        Reset Settings
+                        Restablecer Configuración
                     </button>
                 </div>
             </div>
