--- a/app/front/customer/delivery_details_&_payment_1.html
+++ b/app/front/customer/delivery_details_&_payment_1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
-<html class="light" lang="en">
+<html class="light" lang="es">
 
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Order Type - Cheesy Dreams</title>
+  <title>Tipo de Pedido - Cheesy Dreams</title>
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&amp;display=swap"
     rel="stylesheet" />
@@ -115,16 +115,15 @@
       </div>
       <div class="flex flex-1 justify-end">
         <a class="text-[#181611] dark:text-gray-300 dark:hover:text-white text-sm font-medium leading-normal hover:text-primary transition-colors"
-          href="#">Back to Menu</a>
+          href="#">Volver al Menú</a>
       </div>
     </header>
     <main class="w-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10 flex-grow">
       <div class="flex flex-col items-center justify-center h-full text-center">
         <h2
           class="text-[#181611] dark:text-white text-3xl md:text-4xl font-bold leading-tight tracking-[-0.015em] mb-4">
-          How would you like to receive your order?</h2>
-        <p class="text-[#8c805f] dark:text-gray-400 text-lg mb-12 max-w-xl">Choose your preferred method. You can pick
-          it up yourself or have it delivered straight to your door.</p>
+          ¿Cómo le gustaría recibir su pedido?</h2>
+        <p class="text-[#8c805f] dark:text-gray-400 text-lg mb-12 max-w-xl">Elija su método preferido. Puede recogerlo usted mismo o recibirlo directamente en su puerta.</p>
         <div class="w-full max-w-4xl grid grid-cols-1 md:grid-cols-2 gap-8">
           <label
             class="group relative flex flex-col items-center justify-center p-8 rounded-xl border-2 border-[#e6e3db] dark:border-gray-700 hover:border-primary dark:hover:border-primary cursor-pointer transition-all has-[:checked]:border-primary has-[:checked]:bg-primary/10 dark:has-[:checked]:bg-primary/20"
@@ -135,9 +134,8 @@
                 delivery_dining
               </span>
             </div>
-            <h3 class="text-2xl font-bold text-[#181611] dark:text-white mb-2">Home Delivery</h3>
-            <p class="text-[#8c805f] dark:text-gray-400">Get your cheesy goodness delivered hot and fresh to your
-              doorstep.</p>
+            <h3 class="text-2xl font-bold text-[#181611] dark:text-white mb-2">Entrega a Domicilio</h3>
+            <p class="text-[#8c805f] dark:text-gray-400">Reciba su delicia de queso caliente y fresca en su puerta.</p>
           </label>
           <label
             class="group relative flex flex-col items-center justify-center p-8 rounded-xl border-2 border-[#e6e3db] dark:border-gray-700 hover:border-primary dark:hover:border-primary cursor-pointer transition-all has-[:checked]:border-primary has-[:checked]:bg-primary/10 dark:has-[:checked]:bg-primary/20"
@@ -148,16 +146,15 @@
                 takeout_dining
               </span>
             </div>
-            <h3 class="text-2xl font-bold text-[#181611] dark:text-white mb-2">Take-Away</h3>
-            <p class="text-[#8c805f] dark:text-gray-400">Swing by and pick up your order at your convenience. No
-              waiting!</p>
+            <h3 class="text-2xl font-bold text-[#181611] dark:text-white mb-2">Para Llevar</h3>
+            <p class="text-[#8c805f] dark:text-gray-400">Pase y recoja su pedido a su conveniencia. ¡Sin esperas!</p>
           </label>
         </div>
         <div class="mt-12 w-full max-w-sm">
           <button
             class="w-full rounded-full bg-primary py-4 px-6 text-center text-base font-bold text-[#181611] hover:brightness-110 transition-all focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 dark:focus:ring-offset-background-dark"
             type="submit">
-            Continue
+            Continuar
           </button>
         </div>
       </div>
@@ -165,14 +162,14 @@
     <footer class="w-full bg-white dark:bg-background-dark/50 border-t border-[#e6e3db] dark:border-gray-700 mt-12">
       <div
         class="max-w-7xl mx-auto py-8 px-4 sm:px-6 lg:px-8 flex flex-col sm:flex-row justify-between items-center text-center sm:text-left">
-        <p class="text-sm text-[#8c805f] dark:text-gray-400">© 2024 Cheesy Dreams. All rights reserved.</p>
+        <p class="text-sm text-[#8c805f] dark:text-gray-400">© 2024 Cheesy Dreams. Todos los derechos reservados.</p>
         <div class="flex gap-6 mt-4 sm:mt-0">
           <a class="text-sm text-[#8c805f] dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors"
-            href="#">Privacy Policy</a>
+            href="#">Política de Privacidad</a>
           <a class="text-sm text-[#8c805f] dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors"
-            href="#">Terms of Service</a>
+            href="#">Términos de Servicio</a>
           <a class="text-sm text-[#8c805f] dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors"
-            href="#">Contact</a>
+            href="#">Contacto</a>
         </div>
       </div>
     </footer>
@@ -180,9 +177,10 @@
 
   <div class="fixed bottom-4 right-4 z-50">
     <button id="accessibility-trigger" type="button" aria-controls="accessibility-menu" aria-expanded="false"
-      class="flex h-14 w-14 items-center justify-center rounded-full bg-primary text-white shadow-lg hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-secondary focus:ring-offset-2 focus:ring-offset-background-light">
+      class="flex h-14 w-14 items-center justify-center rounded-full bg-primary text-white shadow-lg hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-secondary focus:ring-offset-2 focus:ring-offset-background-light"
+      aria-label="Abrir Opciones de Accesibilidad">
       <span class="material-symbols-outlined !text-3xl text-[#181611]">accessibility_new</span>
-      <span class="sr-only">Open Accessibility Menu</span>
+      <span class="sr-only">Abrir Menú de Accesibilidad</span>
     </button>
 
     <div id="accessibility-menu" role="dialog" aria-labelledby="accessibility-heading" aria-modal="true"
@@ -190,13 +188,13 @@
 
       <div class="p-4 border-b border-gray-200">
         <h2 class="text-lg font-bold text-gray-900" id="accessibility-heading">
-          Accessibility Settings
+          Configuración de Accesibilidad
         </h2>
       </div>
 
       <div class="p-4 space-y-4 h-80 overflow-y-auto custom-scrollbar">
         <div class="space-y-2">
-          <label class="text-sm font-medium text-gray-700" for="font-size">Font Size</label>
+          <label class="text-sm font-medium text-gray-700" for="font-size">Tamaño de Fuente</label>
           <div class="flex items-center gap-2">
             <span class="text-xs text-gray-500">A</span>
             <input id="font-size" type="range" min="100" max="180" value="100"
@@ -206,25 +204,25 @@
         </div>
 
         <div class="space-y-2">
-          <p class="text-sm font-medium text-gray-700">Contrast Theme</p>
+          <p class="text-sm font-medium text-gray-700">Tema de Contraste</p>
           <div class="grid grid-cols-4 gap-2">
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-white" data-contrast="black-on-white"
-              data-fg="#000000" data-bg="#ffffff" title="Black on white"></button>
+              data-fg="#000000" data-bg="#ffffff" title="Negro sobre blanco" aria-label="Texto negro sobre fondo blanco"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-black" data-contrast="white-on-black"
-              data-fg="#ffffff" data-bg="#000000" title="White on black"></button>
+              data-fg="#ffffff" data-bg="#000000" title="Blanco sobre negro" aria-label="Texto blanco sobre fondo negro"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-yellow-400" data-contrast="yellow-on-blue"
-              data-fg="#facc15" data-bg="#020617" title="Yellow on dark blue"></button>
+              data-fg="#facc15" data-bg="#020617" title="Amarillo sobre azul oscuro" aria-label="Texto amarillo sobre fondo azul oscuro"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-blue-600" data-contrast="blue-on-white"
-              data-fg="#2563eb" data-bg="#ffffff" title="Blue on white"></button>
+              data-fg="#2563eb" data-bg="#ffffff" title="Azul sobre blanco" aria-label="Texto azul sobre fondo blanco"></button>
           </div>
         </div>
 
         <div class="space-y-3 pt-2 border-t border-gray-200">
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Grayscale</p>
+            <p class="text-sm font-medium text-gray-700">Escala de Grises</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="grayscale-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -233,7 +231,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Text Spacing</p>
+            <p class="text-sm font-medium text-gray-700">Espaciado de Texto</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="spacing-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -242,7 +240,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Dyslexia Font</p>
+            <p class="text-sm font-medium text-gray-700">Fuente para Dislexia</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="dyslexia-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -251,7 +249,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Big Cursor</p>
+            <p class="text-sm font-medium text-gray-700">Cursor Grande</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="cursor-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -260,7 +258,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Highlight Links</p>
+            <p class="text-sm font-medium text-gray-700">Resaltar Enlaces</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="links-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -269,7 +267,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Reading Guide</p>
+            <p class="text-sm font-medium text-gray-700">Guía de Lectura</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="reading-guide-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -278,7 +276,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Pause Animations</p>
+            <p class="text-sm font-medium text-gray-700">Pausar Animaciones</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="animation-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -289,7 +287,7 @@
 
         <div class="p-4 border-t border-gray-200">
           <button id="a11y-reset" class="w-full text-center text-sm font-semibold text-gray-500 hover:underline">
-            Reset to Default
+            Restablecer a Predeterminado
           </button>
         </div>
       </div>
@@ -298,7 +296,9 @@
 
   <script>
     // Modal for "Not Implemented" links
+    // This script creates a simple modal to inform the user that a feature is not yet implemented.
     (function () {
+      // Create a style element to inject CSS for the modal
       const style = document.createElement('style');
       style.textContent = `
     .__notimpl_modal_backdrop {
@@ -345,22 +345,28 @@
   `;
       document.head.appendChild(style);
 
+      // Function to show the modal
       function showModal() {
         if (document.querySelector('.__notimpl_modal_backdrop')) return;
 
+        // Create backdrop
         const backdrop = document.createElement('div');
         backdrop.className = '__notimpl_modal_backdrop';
 
+        // Create modal container
         const modal = document.createElement('div');
         modal.className = '__notimpl_modal';
-        modal.innerHTML = '<h2>Not implemented yet!</h2><p>This functionality is not implemented yet.</p>';
+        modal.innerHTML = '<h2>¡Aún no implementado!</h2><p>Esta funcionalidad aún no está implementada.</p>';
 
+        // Create close button
         const closeBtn = document.createElement('button');
         closeBtn.textContent = 'Cerrar';
         closeBtn.addEventListener('click', () => backdrop.remove());
 
         modal.appendChild(closeBtn);
         backdrop.appendChild(modal);
+        
+        // Close modal when clicking outside
         backdrop.addEventListener('click', (e) => {
           if (e.target === backdrop) backdrop.remove();
         });
@@ -368,6 +374,7 @@
         document.body.appendChild(backdrop);
       }
 
+      // Event listener for clicks on elements with 'data-not-implemented' attribute
       document.addEventListener('click', function (e) {
         const target = e.target.closest('[data-not-implemented]');
         if (target) {
@@ -379,7 +386,9 @@
     })();
 
     // ===== ACCESSIBILITY PANEL LOGIC =====
+    // This script manages the accessibility settings including font size, contrast, and other visual aids.
     (function () {
+      // Keys for local storage to persist settings
       const KEY_SIZE = 'a11y_font';
       const KEY_FG = 'a11y_fg';
       const KEY_BG = 'a11y_bg';
@@ -392,6 +401,7 @@
       const KEY_GUIDE = 'a11y_guide';
       const KEY_PAUSE = 'a11y_pause';
 
+      // DOM Elements
       const trigger = document.getElementById('accessibility-trigger');
       const menu = document.getElementById('accessibility-menu');
 
@@ -409,6 +419,7 @@
       const readingGuide = document.getElementById('a11y-reading-guide');
 
       // --- Reading Guide Follow Logic ---
+      // Updates the position of the reading guide bar based on mouse movement
       document.addEventListener('mousemove', (e) => {
         if (document.body.classList.contains('a11y-reading-guide')) {
           readingGuide.style.top = e.clientY + 'px';
@@ -416,6 +427,7 @@
       });
 
       // --- Toggle panel visibility ---
+      // Opens or closes the accessibility menu
       if (trigger && menu) {
         trigger.addEventListener('click', () => {
           const isHidden = menu.classList.contains('hidden');
@@ -425,9 +437,11 @@
       }
 
       // --- Apply settings on load ---
+      // Restore saved settings from local storage
       applyInitialSettings();
 
       // --- Font size (100–180%) ---
+      // Updates the root font size based on slider input
       if (sizeSlider) {
         sizeSlider.addEventListener('input', (e) => {
           const value = e.target.value;
@@ -437,6 +451,7 @@
       }
 
       // --- High contrast presets ---
+      // Sets the high contrast theme based on selected button
       contrastButtons.forEach((btn) => {
         btn.addEventListener('click', () => {
           const fg = btn.dataset.fg;
@@ -445,6 +460,7 @@
         });
       });
 
+      // Helper function to apply high contrast colors
       function setHighContrast(fg, bg) {
         if (fg) {
           document.documentElement.style.setProperty('--a11y-fg', fg);
@@ -459,6 +475,7 @@
       }
 
       // --- Generic Toggle Handler ---
+      // Helper to handle checkbox toggles for various accessibility features
       function setupToggle(el, cls, key) {
         if (!el) return;
         el.addEventListener('change', () => {
@@ -472,6 +489,7 @@
         });
       }
 
+      // Setup event listeners for each toggle
       setupToggle(dyslexiaToggle, 'a11y-dyslexia-font', KEY_DYS);
       setupToggle(cursorToggle, 'a11y-cursor-big', KEY_CURSOR);
       setupToggle(linksToggle, 'a11y-highlight-links', KEY_LINKS);
@@ -481,6 +499,7 @@
       setupToggle(animationToggle, 'a11y-paused', KEY_PAUSE);
 
       // --- Reset ---
+      // Resets all accessibility settings to default
       if (resetBtn) {
         resetBtn.addEventListener('click', (e) => {
           e.preventDefault();
@@ -511,6 +530,7 @@
         });
       }
 
+      // Function to load and apply settings from local storage
       function applyInitialSettings() {
         const loadState = (key, cls, input) => {
           if (localStorage.getItem(key) === '1') {
