--- a/app/front/customer/delivery_order_confirmation.html
+++ b/app/front/customer/delivery_order_confirmation.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
-<html class="light" lang="en">
+<html class="light" lang="es">
 
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Order Confirmed - Cheesy Dreams</title>
+  <title>Pedido Confirmado - Cheesy Dreams</title>
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&amp;display=swap"
     rel="stylesheet" />
@@ -102,8 +102,8 @@
           class="flex size-16 items-center justify-center rounded-full bg-green-100 dark:bg-green-900/50 text-green-600 dark:text-green-400">
           <span class="material-symbols-outlined text-4xl">check_circle</span>
         </div>
-        <h1 class="text-[#1c180d] dark:text-white tracking-tight text-3xl font-bold text-center">Order Confirmed</h1>
-        <p class="text-gray-500 dark:text-gray-400">A new order for home delivery has been received.</p>
+        <h1 class="text-[#1c180d] dark:text-white tracking-tight text-3xl font-bold text-center">Pedido Confirmado</h1>
+        <p class="text-gray-500 dark:text-gray-400">Se ha recibido un nuevo pedido para entrega a domicilio.</p>
       </div>
       <div class="p-6 sm:p-8">
         <div class="flex flex-col gap-6">
@@ -111,17 +111,16 @@
             class="flex flex-col items-stretch justify-start rounded-xl border border-gray-200 dark:border-zinc-800 bg-background-light dark:bg-background-dark p-4 sm:p-6">
             <div class="flex w-full min-w-72 grow flex-col items-stretch justify-center gap-3">
               <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-2">
-                <p class="text-[#1c180d] dark:text-white text-lg font-bold leading-tight">Delivery Details</p>
+                <p class="text-[#1c180d] dark:text-white text-lg font-bold leading-tight">Detalles de Entrega</p>
                 <p class="text-sm font-medium text-[#9e8747] dark:text-primary/80">#CD-12945</p>
               </div>
               <div class="flex flex-col gap-1 text-gray-600 dark:text-gray-300">
-                <p><span class="font-semibold text-[#1c180d] dark:text-white">Customer:</span> Jane Doe</p>
-                <p><span class="font-semibold text-[#1c180d] dark:text-white">Address:</span> 123 Cheese Lane, Gouda, CA
-                  90210</p>
-                <p><span class="font-semibold text-[#1c180d] dark:text-white">Phone:</span> (555) 867-5309</p>
+                <p><span class="font-semibold text-[#1c180d] dark:text-white">Cliente:</span> Jane Doe</p>
+                <p><span class="font-semibold text-[#1c180d] dark:text-white">Dirección:</span> Calle del Queso 123, Villa Queso, MD 28001</p>
+                <p><span class="font-semibold text-[#1c180d] dark:text-white">Teléfono:</span> (555) 867-5309</p>
               </div>
               <a class="text-orange-500 dark:text-orange-400 text-sm font-semibold hover:underline focus:underline focus:outline-none"
-                href="#">View on Map</a>
+                href="#">Ver en Mapa</a>
             </div>
           </div>
           <div class="flex flex-col gap-4">
@@ -129,31 +128,29 @@
               <div class="text-[#1c180d] dark:text-primary flex items-center justify-center shrink-0 size-10">
                 <span class="material-symbols-outlined text-3xl">schedule</span>
               </div>
-              <p class="text-[#1c180d] dark:text-white text-base font-normal leading-normal flex-1 truncate">Estimated
-                Delivery: 6:30 PM - 6:45 PM</p>
+              <p class="text-[#1c180d] dark:text-white text-base font-normal leading-normal flex-1 truncate">Entrega Estimada: 6:30 PM - 6:45 PM</p>
             </div>
             <div class="flex items-center gap-4 rounded-lg bg-gray-100 dark:bg-zinc-800 p-4">
               <div class="text-[#1c180d] dark:text-primary flex items-center justify-center shrink-0 size-10">
                 <span class="material-symbols-outlined text-3xl">receipt_long</span>
               </div>
-              <p class="text-[#1c180d] dark:text-white text-base font-normal leading-normal flex-1 truncate">Status:
-                <span class="font-bold text-green-600 dark:text-green-400">Confirmed</span>
+              <p class="text-[#1c180d] dark:text-white text-base font-normal leading-normal flex-1 truncate">Estado:
+                <span class="font-bold text-green-600 dark:text-green-400">Confirmado</span>
               </p>
             </div>
           </div>
           <div class="flex flex-col">
             <details class="flex flex-col border-t border-t-gray-200 dark:border-t-zinc-800 group">
               <summary class="flex cursor-pointer list-none items-center justify-between gap-6 py-4">
-                <p class="text-[#1c180d] dark:text-white text-base font-medium leading-normal">View Itemized List (3
-                  items)</p>
+                <p class="text-[#1c180d] dark:text-white text-base font-medium leading-normal">Ver Lista Detallada (3 artículos)</p>
                 <div class="text-[#1c180d] dark:text-white group-open:rotate-180 transition-transform">
                   <span class="material-symbols-outlined">expand_more</span>
                 </div>
               </summary>
               <div class="flex flex-col gap-2 pb-2 text-gray-600 dark:text-gray-400 text-sm">
-                <div class="flex justify-between"><span>Margherita Pizza (x1)</span><span>$15.00</span></div>
-                <div class="flex justify-between"><span>Cheesy Garlic Bread (x2)</span><span>$12.00</span></div>
-                <div class="flex justify-between"><span>Soda (x1)</span><span>$3.00</span></div>
+                <div class="flex justify-between"><span>Pizza Margherita (x1)</span><span>$15.00</span></div>
+                <div class="flex justify-between"><span>Pan de Ajo con Queso (x2)</span><span>$12.00</span></div>
+                <div class="flex justify-between"><span>Refresco (x1)</span><span>$3.00</span></div>
                 <div
                   class="flex justify-between font-bold text-[#1c180d] dark:text-white pt-2 border-t border-dashed border-gray-300 dark:border-zinc-700">
                   <span>Total</span><span>$30.00</span>
@@ -168,11 +165,11 @@
         <div class="flex flex-col sm:flex-row flex-1 gap-3 justify-center">
           <button
             class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-12 px-5 bg-primary text-[#1c180d] text-base font-bold leading-normal tracking-[0.015em] grow focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 dark:focus:ring-offset-zinc-900">
-            <span class="truncate">Print Receipt</span>
+            <span class="truncate">Imprimir Recibo</span>
           </button>
           <button
             class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-12 px-5 bg-[#f4f0e6] dark:bg-zinc-800 text-[#1c180d] dark:text-white text-base font-bold leading-normal tracking-[0.015em] grow focus:outline-none focus:ring-2 focus:ring-primary/50 focus:ring-offset-2 dark:focus:ring-offset-zinc-900">
-            <span class="truncate">Back to Dashboard</span>
+            <span class="truncate">Volver al Panel</span>
           </button>
         </div>
       </div>
@@ -181,9 +178,10 @@
 
   <div class="fixed bottom-4 right-4 z-50">
     <button id="accessibility-trigger" type="button" aria-controls="accessibility-menu" aria-expanded="false"
-      class="flex h-14 w-14 items-center justify-center rounded-full bg-primary text-white shadow-lg hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-secondary focus:ring-offset-2 focus:ring-offset-background-light">
+      class="flex h-14 w-14 items-center justify-center rounded-full bg-primary text-white shadow-lg hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-secondary focus:ring-offset-2 focus:ring-offset-background-light"
+      aria-label="Abrir Opciones de Accesibilidad">
       <span class="material-symbols-outlined !text-3xl text-[#181611]">accessibility_new</span>
-      <span class="sr-only">Open Accessibility Menu</span>
+      <span class="sr-only">Abrir Menú de Accesibilidad</span>
     </button>
 
     <div id="accessibility-menu" role="dialog" aria-labelledby="accessibility-heading" aria-modal="true"
@@ -191,13 +189,13 @@
 
       <div class="p-4 border-b border-gray-200">
         <h2 class="text-lg font-bold text-gray-900" id="accessibility-heading">
-          Accessibility Settings
+          Configuración de Accesibilidad
         </h2>
       </div>
 
       <div class="p-4 space-y-4 h-80 overflow-y-auto custom-scrollbar">
         <div class="space-y-2">
-          <label class="text-sm font-medium text-gray-700" for="font-size">Font Size</label>
+          <label class="text-sm font-medium text-gray-700" for="font-size">Tamaño de Fuente</label>
           <div class="flex items-center gap-2">
             <span class="text-xs text-gray-500">A</span>
             <input id="font-size" type="range" min="100" max="180" value="100"
@@ -207,25 +205,25 @@
         </div>
 
         <div class="space-y-2">
-          <p class="text-sm font-medium text-gray-700">Contrast Theme</p>
+          <p class="text-sm font-medium text-gray-700">Tema de Contraste</p>
           <div class="grid grid-cols-4 gap-2">
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-white" data-contrast="black-on-white"
-              data-fg="#000000" data-bg="#ffffff" title="Black on white"></button>
+              data-fg="#000000" data-bg="#ffffff" title="Negro sobre blanco" aria-label="Texto negro sobre fondo blanco"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-black" data-contrast="white-on-black"
-              data-fg="#ffffff" data-bg="#000000" title="White on black"></button>
+              data-fg="#ffffff" data-bg="#000000" title="Blanco sobre negro" aria-label="Texto blanco sobre fondo negro"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-yellow-400" data-contrast="yellow-on-blue"
-              data-fg="#facc15" data-bg="#020617" title="Yellow on dark blue"></button>
+              data-fg="#facc15" data-bg="#020617" title="Amarillo sobre azul oscuro" aria-label="Texto amarillo sobre fondo azul oscuro"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-blue-600" data-contrast="blue-on-white"
-              data-fg="#2563eb" data-bg="#ffffff" title="Blue on white"></button>
+              data-fg="#2563eb" data-bg="#ffffff" title="Azul sobre blanco" aria-label="Texto azul sobre fondo blanco"></button>
           </div>
         </div>
 
         <div class="space-y-3 pt-2 border-t border-gray-200">
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Grayscale</p>
+            <p class="text-sm font-medium text-gray-700">Escala de Grises</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="grayscale-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -234,7 +232,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Text Spacing</p>
+            <p class="text-sm font-medium text-gray-700">Espaciado de Texto</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="spacing-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -243,7 +241,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Dyslexia Font</p>
+            <p class="text-sm font-medium text-gray-700">Fuente para Dislexia</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="dyslexia-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -252,7 +250,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Big Cursor</p>
+            <p class="text-sm font-medium text-gray-700">Cursor Grande</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="cursor-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -261,7 +259,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Highlight Links</p>
+            <p class="text-sm font-medium text-gray-700">Resaltar Enlaces</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="links-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -270,7 +268,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Reading Guide</p>
+            <p class="text-sm font-medium text-gray-700">Guía de Lectura</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="reading-guide-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -279,7 +277,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-700">Pause Animations</p>
+            <p class="text-sm font-medium text-gray-700">Pausar Animaciones</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="animation-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -290,7 +288,7 @@
 
         <div class="p-4 border-t border-gray-200">
           <button id="a11y-reset" class="w-full text-center text-sm font-semibold text-gray-500 hover:underline">
-            Reset to Default
+            Restablecer a Predeterminado
           </button>
         </div>
       </div>
@@ -299,7 +297,9 @@
 
   <script>
     // Modal for "Not Implemented" links
+    // This script creates a simple modal to inform the user that a feature is not yet implemented.
     (function () {
+      // Create a style element to inject CSS for the modal
       const style = document.createElement('style');
       style.textContent = `
     .__notimpl_modal_backdrop {
@@ -346,22 +346,28 @@
   `;
       document.head.appendChild(style);
 
+      // Function to show the modal
       function showModal() {
         if (document.querySelector('.__notimpl_modal_backdrop')) return;
 
+        // Create backdrop
         const backdrop = document.createElement('div');
         backdrop.className = '__notimpl_modal_backdrop';
 
+        // Create modal container
         const modal = document.createElement('div');
         modal.className = '__notimpl_modal';
-        modal.innerHTML = '<h2>Not implemented yet!</h2><p>This functionality is not implemented yet.</p>';
+        modal.innerHTML = '<h2>¡Aún no implementado!</h2><p>Esta funcionalidad aún no está implementada.</p>';
 
+        // Create close button
         const closeBtn = document.createElement('button');
         closeBtn.textContent = 'Cerrar';
         closeBtn.addEventListener('click', () => backdrop.remove());
 
         modal.appendChild(closeBtn);
         backdrop.appendChild(modal);
+        
+        // Close modal when clicking outside
         backdrop.addEventListener('click', (e) => {
           if (e.target === backdrop) backdrop.remove();
         });
@@ -369,6 +375,7 @@
         document.body.appendChild(backdrop);
       }
 
+      // Event listener for clicks on elements with 'data-not-implemented' attribute
       document.addEventListener('click', (e) => {
         const target = e.target.closest('[data-not-implemented]');
         if (target) {
@@ -379,7 +386,9 @@
     })();
 
     // ===== ACCESSIBILITY PANEL LOGIC =====
+    // This script manages the accessibility settings including font size, contrast, and other visual aids.
     (function () {
+      // Keys for local storage to persist settings
       const KEY_SIZE = 'a11y_font';
       const KEY_FG = 'a11y_fg';
       const KEY_BG = 'a11y_bg';
@@ -392,6 +401,7 @@
       const KEY_GUIDE = 'a11y_guide';
       const KEY_PAUSE = 'a11y_pause';
 
+      // DOM Elements
       const trigger = document.getElementById('accessibility-trigger');
       const menu = document.getElementById('accessibility-menu');
 
@@ -409,6 +419,7 @@
       const readingGuide = document.getElementById('a11y-reading-guide');
 
       // --- Reading Guide Follow Logic ---
+      // Updates the position of the reading guide bar based on mouse movement
       document.addEventListener('mousemove', (e) => {
         if (document.body.classList.contains('a11y-reading-guide')) {
           readingGuide.style.top = e.clientY + 'px';
@@ -416,6 +427,7 @@
       });
 
       // --- Toggle panel visibility ---
+      // Opens or closes the accessibility menu
       if (trigger && menu) {
         trigger.addEventListener('click', () => {
           const isHidden = menu.classList.contains('hidden');
@@ -425,9 +437,11 @@
       }
 
       // --- Apply settings on load ---
+      // Restore saved settings from local storage
       applyInitialSettings();
 
       // --- Font size (100–180%) ---
+      // Updates the root font size based on slider input
       if (sizeSlider) {
         sizeSlider.addEventListener('input', (e) => {
           const value = e.target.value;
@@ -437,6 +451,7 @@
       }
 
       // --- High contrast presets ---
+      // Sets the high contrast theme based on selected button
       contrastButtons.forEach((btn) => {
         btn.addEventListener('click', () => {
           const fg = btn.dataset.fg;
@@ -445,6 +460,7 @@
         });
       });
 
+      // Helper function to apply high contrast colors
       function setHighContrast(fg, bg) {
         if (fg) {
           document.documentElement.style.setProperty('--a11y-fg', fg);
@@ -459,6 +475,7 @@
       }
 
       // --- Generic Toggle Handler ---
+      // Helper to handle checkbox toggles for various accessibility features
       function setupToggle(el, cls, key) {
         if (!el) return;
         el.addEventListener('change', () => {
@@ -472,6 +489,7 @@
         });
       }
 
+      // Setup event listeners for each toggle
       setupToggle(dyslexiaToggle, 'a11y-dyslexia-font', KEY_DYS);
       setupToggle(cursorToggle, 'a11y-cursor-big', KEY_CURSOR);
       setupToggle(linksToggle, 'a11y-highlight-links', KEY_LINKS);
@@ -481,6 +499,7 @@
       setupToggle(animationToggle, 'a11y-paused', KEY_PAUSE);
 
       // --- Reset ---
+      // Resets all accessibility settings to default
       if (resetBtn) {
         resetBtn.addEventListener('click', (e) => {
           e.preventDefault();
@@ -511,6 +530,7 @@
         });
       }
 
+      // Function to load and apply settings from local storage
       function applyInitialSettings() {
         const loadState = (key, cls, input) => {
           if (localStorage.getItem(key) === '1') {
