--- a/app/front/customer/take-away_details_&_pickup_time.html
+++ b/app/front/customer/take-away_details_&_pickup_time.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html class="light" lang="en">
+<html class="light" lang="es">
 
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Finalize Your Take-Away Order - Cheesy Dreams</title>
+  <title>Finaliza tu Pedido Para Llevar - Cheesy Dreams</title>
   <link href="https://fonts.googleapis.com" rel="preconnect" />
   <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap"
@@ -128,16 +128,14 @@
             <h1 class="text-xl font-bold tracking-tight">Cheesy Dreams</h1>
           </div>
           <a class="text-sm font-medium hover:text-primary focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light dark:focus:ring-offset-background-dark rounded"
-            href="#">Back to Menu</a>
+            href="#">Volver al Menú</a>
         </div>
       </div>
     </header>
     <main class="flex-grow container mx-auto px-4 py-8 md:py-12">
       <div class="mb-10">
-        <h2 class="text-4xl font-black tracking-tighter text-text-light dark:text-text-dark">Finalize Your Take-Away
-          Order</h2>
-        <p class="mt-2 text-lg text-text-muted-light dark:text-text-muted-dark">Please review your order and select a
-          pickup time below.</p>
+        <h2 class="text-4xl font-black tracking-tighter text-text-light dark:text-text-dark">Finaliza Tu Pedido Para Llevar</h2>
+        <p class="mt-2 text-lg text-text-muted-light dark:text-text-muted-dark">Por favor, revisa tu pedido y selecciona una hora de recogida a continuación.</p>
       </div>
       <div class="grid grid-cols-1 lg:grid-cols-5 gap-8 xl:gap-12">
         <div class="lg:col-span-3">
@@ -145,25 +143,25 @@
             class="rounded-xl border border-border-light dark:border-border-dark bg-surface-light dark:bg-surface-dark shadow-sm">
             <h3
               class="text-2xl font-bold tracking-tight px-6 py-4 border-b border-border-light dark:border-border-dark">
-              Your Order</h3>
+              Tu Pedido</h3>
             <div class="divide-y divide-border-light dark:divide-border-dark">
               <div class="flex items-center gap-4 px-6 py-4">
                 <img class="h-16 w-16 rounded-lg object-cover"
-                  data-alt="A gourmet grilled cheese sandwich cut in half, showing melted gouda cheese."
+                  data-alt="Un sándwich gourmet de queso a la parrilla cortado por la mitad, mostrando queso gouda derretido."
                   src="https://lh3.googleusercontent.com/aida-public/AB6AXuDzWOel_H1CB0JpAzCEBxR8g2P-rpAlprcg3yZy1oVS59P3DTPZl47BFXCGDONJJndYple7QX4HVRjdSWHiWp2zYKABfOGDzV4Q_OUBewfWfnYPKZTMfzdMNCDrU0wWvGBY_5UC4oh4eS9ZsfR76SNOM_jb-YlDBYAxTEt0z4XnDtbeRA0T-MV94wsOZTdHBjRxPSCLh8W2KkszreH1J_OyqkuUCYRQrQmZyaobo01jt7CJWYFEQfpZzygTDuwfSp3fQ_xMkUN2Wvo" />
                 <div class="flex-grow">
-                  <p class="font-medium">Gouda Grilled Cheese</p>
-                  <p class="text-sm text-text-muted-light dark:text-text-muted-dark">Quantity: 1</p>
+                  <p class="font-medium">Sándwich de Queso Gouda a la Parrilla</p>
+                  <p class="text-sm text-text-muted-light dark:text-text-muted-dark">Cantidad: 1</p>
                 </div>
                 <p class="font-medium shrink-0">$12.50</p>
               </div>
               <div class="flex items-center gap-4 px-6 py-4">
                 <img class="h-16 w-16 rounded-lg object-cover"
-                  data-alt="A warm bowl of creamy tomato soup garnished with fresh basil leaves."
+                  data-alt="Un tazón caliente de sopa cremosa de tomate adornada con hojas de albahaca fresca."
                   src="https://lh3.googleusercontent.com/aida-public/AB6AXuDcK3ul36qNtubJl1rFRnCSkjjJ3rtBUC6jMvlBHQOl5Bqq8uJr24N0vFXP1s9mGaAR3GCoT6QWiQLU68uHGjM65qqsuVhA79W2O3TDYXOSn4rK9hp-LRwDwBVlOTtmU3KI_ZzZkNV4SsJEA4gzrCxPDfzxsn0Opa5DxzRrhhEc0SMoD4T8328z_b_MfmHBIoZZc5G-nocp7hdLcIQefnJPqrJ2yJBXLGUOUnzUBYT0lyR8Mw3taQg0cKSSoSl2zNWYeSCT1i4sUM8" />
                 <div class="flex-grow">
-                  <p class="font-medium">Tomato Soup</p>
-                  <p class="text-sm text-text-muted-light dark:text-text-muted-dark">Quantity: 1</p>
+                  <p class="font-medium">Sopa de Tomate</p>
+                  <p class="text-sm text-text-muted-light dark:text-text-muted-dark">Cantidad: 1</p>
                 </div>
                 <p class="font-medium shrink-0">$6.00</p>
               </div>
@@ -174,7 +172,7 @@
                 <span>$18.50</span>
               </div>
               <div class="flex justify-between text-sm text-text-muted-light dark:text-text-muted-dark">
-                <span>Taxes & Fees</span>
+                <span>Impuestos y Tarifas</span>
                 <span>$1.62</span>
               </div>
               <div class="flex justify-between text-lg font-bold text-text-light dark:text-text-dark">
@@ -186,18 +184,18 @@
         </div>
         <div class="lg:col-span-2 space-y-8">
           <div class="space-y-4">
-            <h3 class="text-2xl font-bold tracking-tight">Pickup Information</h3>
+            <h3 class="text-2xl font-bold tracking-tight">Información de Recogida</h3>
             <div>
-              <label class="font-semibold text-text-light dark:text-text-dark">Select a Pickup Time</label>
+              <label class="font-semibold text-text-light dark:text-text-dark">Selecciona una Hora de Recogida</label>
               <fieldset class="mt-2">
-                <legend class="sr-only">Pickup time</legend>
+                <legend class="sr-only">Hora de recogida</legend>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
                   <label
                     class="relative flex cursor-pointer rounded-lg border border-border-light dark:border-border-dark bg-surface-light dark:bg-surface-dark p-4 shadow-sm focus-within:ring-2 focus-within:ring-primary focus-within:ring-offset-2 focus-within:ring-offset-background-light dark:focus-within:ring-offset-background-dark has-[:checked]:border-primary has-[:checked]:ring-2 has-[:checked]:ring-primary"
                     for="asap">
                     <input class="sr-only" id="asap" name="pickup-time" type="radio" value="asap" />
                     <div class="flex flex-col">
-                      <span class="font-medium text-text-light dark:text-text-dark">ASAP</span>
+                      <span class="font-medium text-text-light dark:text-text-dark">Lo antes posible</span>
                       <span class="text-sm text-text-muted-light dark:text-text-muted-dark">15-20 min</span>
                     </div>
                   </label>
@@ -206,8 +204,8 @@
                     for="30min">
                     <input class="sr-only" id="30min" name="pickup-time" type="radio" value="30min" />
                     <div class="flex flex-col">
-                      <span class="font-medium text-text-light dark:text-text-dark">In 30 min</span>
-                      <span class="text-sm text-text-muted-light dark:text-text-muted-dark">Approx. 6:30 PM</span>
+                      <span class="font-medium text-text-light dark:text-text-dark">En 30 min</span>
+                      <span class="text-sm text-text-muted-light dark:text-text-muted-dark">Aprox. 6:30 PM</span>
                     </div>
                   </label>
                   <label
@@ -215,8 +213,8 @@
                     for="1hr">
                     <input class="sr-only" id="1hr" name="pickup-time" type="radio" value="1hr" />
                     <div class="flex flex-col">
-                      <span class="font-medium text-text-light dark:text-text-dark">In 1 hour</span>
-                      <span class="text-sm text-text-muted-light dark:text-text-muted-dark">Approx. 7:00 PM</span>
+                      <span class="font-medium text-text-light dark:text-text-dark">En 1 hora</span>
+                      <span class="text-sm text-text-muted-light dark:text-text-muted-dark">Aprox. 7:00 PM</span>
                     </div>
                   </label>
                   <label
@@ -224,7 +222,7 @@
                     for="custom">
                     <input class="sr-only" id="custom" name="pickup-time" type="radio" value="custom" />
                     <div class="flex flex-col">
-                      <span class="font-medium text-text-light dark:text-text-dark">Choose time</span>
+                      <span class="font-medium text-text-light dark:text-text-dark">Elegir hora</span>
                       <input
                         class="mt-1 block w-full rounded border-border-light dark:border-border-dark dark:bg-surface-dark text-sm text-text-muted-light dark:text-text-muted-dark focus:border-primary focus:ring-primary"
                         max="21:00" min="11:00" onfocus="document.getElementById('custom').checked = true;" step="900"
@@ -236,15 +234,14 @@
             </div>
           </div>
           <div>
-            <label class="font-semibold text-text-light dark:text-text-dark" for="instructions">Special
-              Instructions</label>
+            <label class="font-semibold text-text-light dark:text-text-dark" for="instructions">Instrucciones Especiales</label>
             <textarea
               class="mt-2 block w-full rounded-lg border-border-light dark:border-border-dark bg-surface-light dark:bg-surface-dark text-text-light dark:text-text-dark shadow-sm focus:border-primary focus:ring-primary placeholder:text-text-muted-light dark:placeholder:text-text-muted-dark"
-              id="instructions" name="instructions" placeholder="e.g., no onions, extra crispy" rows="4"></textarea>
+              id="instructions" name="instructions" placeholder="ej., sin cebolla, extra crujiente" rows="4"></textarea>
           </div>
           <div
             class="rounded-xl border border-border-light dark:border-border-dark bg-surface-light dark:bg-surface-dark p-6 shadow-sm">
-            <h3 class="text-lg font-bold">Pickup Location</h3>
+            <h3 class="text-lg font-bold">Ubicación de Recogida</h3>
             <div class="mt-4 space-y-3 text-sm">
               <div class="flex items-start gap-3">
                 <span class="material-symbols-outlined text-primary text-xl mt-0.5">storefront</span>
@@ -258,15 +255,15 @@
               <div class="flex items-start gap-3">
                 <span class="material-symbols-outlined text-primary text-xl mt-0.5">schedule</span>
                 <div>
-                  <p class="font-semibold">Operating Hours</p>
-                  <p class="text-text-muted-light dark:text-text-muted-dark">Daily: 11:00 AM - 9:00 PM</p>
+                  <p class="font-semibold">Horario de Apertura</p>
+                  <p class="text-text-muted-light dark:text-text-muted-dark">Diario: 11:00 AM - 9:00 PM</p>
                 </div>
               </div>
             </div>
           </div>
           <button
             class="w-full rounded-full bg-primary py-4 px-8 text-lg font-bold text-text-light shadow-lg transition-transform hover:scale-[1.02] focus:outline-none focus:ring-4 focus:ring-primary/50 disabled:cursor-not-allowed disabled:bg-gray-300 disabled:text-gray-500 dark:disabled:bg-gray-600 dark:disabled:text-gray-400">
-            Confirm & Proceed to Payment
+            Confirmar y Proceder al Pago
           </button>
         </div>
       </div>
@@ -276,7 +273,7 @@
 
   <div class="fixed bottom-4 right-4 z-50">
     <button id="accessibility-trigger" type="button" aria-controls="accessibility-menu" aria-expanded="false"
-      aria-label="Open Accessibility Options"
+      aria-label="Abrir Opciones de Accesibilidad"
       class="flex h-14 w-14 items-center justify-center rounded-full bg-primary text-text-light shadow-lg transition-transform hover:scale-110 focus:outline-none focus:ring-4 focus:ring-primary/50">
       <span class="material-symbols-outlined !text-3xl">accessibility_new</span>
     </button>
@@ -286,14 +283,13 @@
 
       <div class="border-b border-border-light pb-2 mb-4 dark:border-border-dark">
         <h3 id="accessibility-heading" class="text-lg font-bold text-text-light dark:text-text-dark">
-          Accessibility Settings
+          Configuración de Accesibilidad
         </h3>
       </div>
 
       <div class="space-y-4 h-80 overflow-y-auto pr-1 custom-scrollbar">
         <div class="space-y-2">
-          <label class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark" for="font-size">Text
-            Size</label>
+          <label class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark" for="font-size">Tamaño del Texto</label>
           <div class="flex items-center gap-2">
             <span class="text-xs text-text-muted-light dark:text-text-muted-dark">A</span>
             <input id="font-size" type="range" min="100" max="180" step="10" value="100"
@@ -303,30 +299,30 @@
         </div>
 
         <div class="space-y-2">
-          <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Contrast Theme</p>
+          <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Tema de Contraste</p>
           <div class="grid grid-cols-4 gap-2">
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-white" data-contrast="black-on-white"
-              data-fg="#000000" data-bg="#ffffff" title="Black on White"
-              aria-label="Black text on White background"></button>
+              data-fg="#000000" data-bg="#ffffff" title="Negro sobre Blanco"
+              aria-label="Texto negro sobre fondo blanco"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-black" data-contrast="white-on-black"
-              data-fg="#ffffff" data-bg="#000000" title="White on Black"
-              aria-label="White text on Black background"></button>
+              data-fg="#ffffff" data-bg="#000000" title="Blanco sobre Negro"
+              aria-label="Texto blanco sobre fondo negro"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-yellow-400" data-contrast="yellow-on-blue"
-              data-fg="#facc15" data-bg="#020617" title="Yellow on Blue"
-              aria-label="Yellow text on Dark Blue background"></button>
+              data-fg="#facc15" data-bg="#020617" title="Amarillo sobre Azul"
+              aria-label="Texto amarillo sobre fondo azul oscuro"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-blue-600" data-contrast="blue-on-white"
-              data-fg="#2563eb" data-bg="#ffffff" title="Blue on White"
-              aria-label="Blue text on White background"></button>
+              data-fg="#2563eb" data-bg="#ffffff" title="Azul sobre Blanco"
+              aria-label="Texto azul sobre fondo blanco"></button>
           </div>
         </div>
 
         <div class="space-y-3 pt-2 border-t border-border-light dark:border-border-dark">
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Grayscale</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Escala de Grises</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="grayscale-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -335,7 +331,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Text Spacing</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Espaciado de Texto</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="spacing-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -344,7 +340,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Dyslexia Font</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Fuente para Dislexia</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="dyslexia-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -353,7 +349,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Big Cursor</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Cursor Grande</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="cursor-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -362,7 +358,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Highlight Links</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Resaltar Enlaces</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="links-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -371,7 +367,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Reading Guide</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Guía de Lectura</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="reading-guide-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -380,7 +376,7 @@
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Pause Animations</p>
+            <p class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark">Pausar Animaciones</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="animation-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary-dark" />
@@ -394,7 +390,7 @@
       <div class="mt-4 border-t border-border-light pt-3 dark:border-border-dark">
         <button id="a11y-reset"
           class="w-full text-center text-sm font-bold text-primary hover:text-primary-dark hover:underline">
-          Reset Settings
+          Restablecer Configuración
         </button>
       </div>
     </div>
