--- a/app/front/login.html
+++ b/app/front/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" class="">
+<html lang="es" class="">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login - Cheesy Dreams</title>
+  <title>Iniciar Sesión - Cheesy Dreams</title>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700;900&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <link href="https://fonts.cdnfonts.com/css/opendyslexic" rel="stylesheet">
@@ -152,15 +152,15 @@
       <main class="flex flex-1 items-center justify-center py-10 sm:py-20 px-4">
         <div class="w-full max-w-md space-y-8">
           <div class="text-center">
-            <h1 class="text-4xl font-black leading-tight tracking-[-0.033em] text-text-primary">Welcome Back!</h1>
-            <p class="mt-2 text-base font-normal leading-normal text-text-secondary">Please log in to your account</p>
+            <h1 class="text-4xl font-black leading-tight tracking-[-0.033em] text-text-primary">¡Bienvenido de nuevo!</h1>
+            <p class="mt-2 text-base font-normal leading-normal text-text-secondary">Por favor, inicie sesión en su cuenta</p>
           </div>
 
           <form action="#" class="space-y-6" method="POST">
             <div class="space-y-4">
               <div>
-                <label class="block text-sm font-medium leading-6 text-text-primary" for="email">Username or
-                  Email</label>
+                <label class="block text-sm font-medium leading-6 text-text-primary" for="email">Usuario o
+                  Correo Electrónico</label>
                 <div class="mt-2">
                   <input autocomplete="email"
                     class="block w-full rounded-lg border-0 py-3 text-text-primary shadow-sm ring-1 ring-inset ring-border-color placeholder:text-text-secondary focus:ring-2 focus:ring-inset focus:ring-primary-dark sm:text-sm sm:leading-6"
@@ -170,10 +170,10 @@
 
               <div>
                 <div class="flex items-center justify-between">
-                  <label class="block text-sm font-medium leading-6 text-text-primary" for="password">Password</label>
+                  <label class="block text-sm font-medium leading-6 text-text-primary" for="password">Contraseña</label>
                   <div class="text-sm">
                     <a class="font-semibold text-primary hover:text-primary-dark" href="#" data-not-implemented>
-                      Forgot Password?
+                      ¿Olvidaste tu contraseña?
                     </a>
                   </div>
                 </div>
@@ -185,22 +185,22 @@
               </div>
 
               <div>
-                <label class="block text-sm font-medium leading-6 text-text-primary" for="user-type">User Type</label>
+                <label class="block text-sm font-medium leading-6 text-text-primary" for="user-type">Tipo de Usuario</label>
                 <div class="mt-2 relative">
                   <select
                     class="block w-full appearance-none rounded-lg border-0 py-3 pl-3 pr-10 text-text-primary shadow-sm ring-1 ring-inset ring-border-color focus:ring-2 focus:ring-inset focus:ring-primary-dark sm:text-sm sm:leading-6"
                     id="user-type" name="user-type">
-                    <option>Manager</option>
-                    <option>Staff</option>
-                    <option>Customer</option>
+                    <option value="Manager">Gerente</option>
+                    <option value="Staff">Personal</option>
+                    <option value="Customer">Cliente</option>
                   </select>
                 </div>
               </div>
 
               <div>
-                <p>Don't have an account yet?
+                <p>¿Aún no tienes una cuenta?
                   <a class="font-semibold text-primary hover:text-primary-dark" href="{{ url_for('register') }}">
-                    Register here
+                    Regístrate aquí
                   </a>
                 </p>
               </div>
@@ -210,7 +210,7 @@
               <button
                 class="flex w-full justify-center rounded-lg bg-primary px-4 py-3 text-base font-bold leading-normal text-white shadow-sm hover:bg-primary-dark focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-dark"
                 type="submit">
-                Log In
+                Iniciar Sesión
               </button>
             </div>
           </form>
@@ -234,14 +234,13 @@
 
         <div class="border-b border-gray-200 pb-2 mb-4 dark:border-gray-700">
           <h3 id="accessibility-heading" class="text-lg font-bold text-gray-900 dark:text-white">
-            Accessibility Settings
+            Configuración de Accesibilidad
           </h3>
         </div>
 
         <div class="space-y-4 h-80 overflow-y-auto pr-1 custom-scrollbar">
           <div class="space-y-2">
-            <label class="text-sm font-medium text-gray-600 dark:text-gray-400" for="font-size">Text
-              Size</label>
+            <label class="text-sm font-medium text-gray-600 dark:text-gray-400" for="font-size">Tamaño del Texto</label>
             <div class="flex items-center gap-2">
               <span class="text-xs text-gray-600 dark:text-gray-400">A</span>
               <input id="font-size" type="range" min="100" max="180" step="10" value="100"
@@ -251,7 +250,7 @@
           </div>
 
           <div class="space-y-2">
-            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Contrast Theme</p>
+            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Tema de Contraste</p>
             <div class="grid grid-cols-4 gap-2">
               <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-white" data-contrast="black-on-white"
                 data-fg="#000000" data-bg="#ffffff" title="Black on White"
@@ -274,7 +273,7 @@
           <div class="space-y-3 pt-2 border-t border-gray-200 dark:border-gray-700">
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Grayscale</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Escala de Grises</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="grayscale-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -283,7 +282,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Text Spacing</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Espaciado de Texto</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="spacing-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -292,7 +291,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Dyslexia Font</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Fuente para Dislexia</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="dyslexia-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -301,7 +300,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Big Cursor</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Cursor Grande</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="cursor-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -310,7 +309,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Highlight Links</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Resaltar Enlaces</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="links-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -319,7 +318,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Reading Guide</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Guía de Lectura</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="reading-guide-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -328,7 +327,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Pause Animations</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Pausar Animaciones</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="animation-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -342,7 +341,7 @@
         <div class="mt-4 border-t border-gray-200 pt-3 dark:border-gray-700">
           <button id="a11y-reset"
             class="w-full text-center text-sm font-bold text-primary hover:text-yellow-600 hover:underline">
-            Reset Settings
+            Restablecer Configuración
           </button>
         </div>
       </div>
@@ -405,7 +404,7 @@
 
             const modal = document.createElement('div');
             modal.className = '__notimpl_modal';
-            modal.innerHTML = '<h2>Not implemented yet!</h2><p>This functionality is not implemented yet.</p>';
+            modal.innerHTML = '<h2>¡Aún no implementado!</h2><p>Esta funcionalidad aún no está implementada.</p>';
 
             const closeBtn = document.createElement('button');
             closeBtn.textContent = 'Cerrar';
