--- a/app/front/logout.html
+++ b/app/front/logout.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html class="" lang="en">
+<html class="" lang="es">
 
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Log Out - Cheesy Dreams</title>
+  <title>Cerrar Sesión - Cheesy Dreams</title>
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700;900&amp;display=swap"
     rel="stylesheet" />
@@ -69,16 +69,16 @@
         </div>
         <div class="hidden md:flex flex-1 justify-end gap-8">
           <div class="flex items-center gap-9">
-            <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary" href="#">Home</a>
-            <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary" href="#">Menu</a>
-            <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary" href="#">About
-              Us</a>
+            <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary" href="#">Inicio</a>
+            <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary" href="#">Menú</a>
+            <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary" href="#">Sobre
+              Nosotros</a>
             <a class="text-sm font-medium leading-normal text-text-secondary hover:text-text-primary"
-              href="#">Contact</a>
+              href="#">Contacto</a>
           </div>
           <button
             class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-primary text-white text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary-dark">
-            <span class="truncate">My Account</span>
+            <span class="truncate">Mi Cuenta</span>
           </button>
         </div>
       </header>
@@ -89,21 +89,21 @@
               <span class="material-symbols-outlined !text-5xl">logout</span>
             </div>
             <div class="flex flex-col gap-3">
-              <p class="text-4xl font-black leading-tight tracking-[-0.033em] text-text-primary">Log Out</p>
-              <p class="text-base font-normal leading-normal text-text-secondary">Are you sure you want to log out?</p>
+              <p class="text-4xl font-black leading-tight tracking-[-0.033em] text-text-primary">Cerrar Sesión</p>
+              <p class="text-base font-normal leading-normal text-text-secondary">¿Estás seguro de que quieres cerrar sesión?</p>
             </div>
           </div>
           <div class="flex w-full flex-col sm:flex-row items-center justify-center gap-4 pt-4">
             <a href="javascript:history.back()" class="w-full sm:w-auto">
               <button
                 class="flex w-full sm:w-auto min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-transparent text-text-secondary hover:bg-gray-100 text-base font-bold leading-normal tracking-[0.015em] grow sm:grow-0 border-2 border-border-color hover:border-gray-300">
-                <span class="truncate">Cancel</span>
+                <span class="truncate">Cancelar</span>
               </button>
             </a>
             <a href="/" class="w-full sm:w-auto">
               <button
                 class="flex w-full sm:w-auto min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-secondary text-white text-base font-bold leading-normal tracking-[0.015em] grow sm:grow-0 hover:bg-secondary/90">
-                <span class="truncate">Yes, Log Out</span>
+                <span class="truncate">Sí, Cerrar Sesión</span>
               </button>
             </a>
           </div>
@@ -122,14 +122,13 @@
 
         <div class="border-b border-gray-200 pb-2 mb-4 dark:border-gray-700">
           <h3 id="accessibility-heading" class="text-lg font-bold text-gray-900 dark:text-white">
-            Accessibility Settings
+            Configuración de Accesibilidad
           </h3>
         </div>
 
         <div class="space-y-4 h-80 overflow-y-auto pr-1 custom-scrollbar">
           <div class="space-y-2">
-            <label class="text-sm font-medium text-gray-600 dark:text-gray-400" for="font-size">Text
-              Size</label>
+            <label class="text-sm font-medium text-gray-600 dark:text-gray-400" for="font-size">Tamaño del Texto</label>
             <div class="flex items-center gap-2">
               <span class="text-xs text-gray-600 dark:text-gray-400">A</span>
               <input id="font-size" type="range" min="100" max="180" step="10" value="100"
@@ -139,7 +138,7 @@
           </div>
 
           <div class="space-y-2">
-            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Contrast Theme</p>
+            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Tema de Contraste</p>
             <div class="grid grid-cols-4 gap-2">
               <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-white" data-contrast="black-on-white"
                 data-fg="#000000" data-bg="#ffffff" title="Black on White"
@@ -162,7 +161,7 @@
           <div class="space-y-3 pt-2 border-t border-gray-200 dark:border-gray-700">
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Grayscale</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Escala de Grises</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="grayscale-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -171,7 +170,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Text Spacing</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Espaciado de Texto</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="spacing-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -180,7 +179,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Dyslexia Font</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Fuente para Dislexia</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="dyslexia-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -189,7 +188,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Big Cursor</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Cursor Grande</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="cursor-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -198,7 +197,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Highlight Links</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Resaltar Enlaces</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="links-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -207,7 +206,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Reading Guide</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Guía de Lectura</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="reading-guide-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -216,7 +215,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Pause Animations</p>
+              <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Pausar Animaciones</p>
               <label class="inline-flex items-center gap-2 cursor-pointer">
                 <input id="animation-toggle" type="checkbox"
                   class="rounded border-gray-300 text-primary focus:ring-primary" />
@@ -230,7 +229,7 @@
         <div class="mt-4 border-t border-gray-200 pt-3 dark:border-gray-700">
           <button id="a11y-reset"
             class="w-full text-center text-sm font-bold text-primary hover:text-yellow-600 hover:underline">
-            Reset Settings
+            Restablecer Configuración
           </button>
         </div>
       </div>
