--- a/app/front/manager/pending_reservation_screen.html
+++ b/app/front/manager/pending_reservation_screen.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html class="" lang="en">
+<html class="" lang="es">
 
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Pending Reservations - Cheesy Dreams</title>
+  <title>Reservas Pendientes - Cheesy Dreams</title>
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
@@ -23,6 +23,7 @@
 
 <body class="font-display bg-background-light dark:bg-background-dark">
   <div class="flex min-h-screen w-full">
+    <!-- Side Navigation -->
     <aside
       class="flex h-screen w-64 flex-col bg-white dark:bg-gray-900 p-4 sticky top-0 border-r border-gray-200 dark:border-gray-700">
       <div class="flex flex-col gap-4">
@@ -32,29 +33,29 @@
           </div>
           <div class="flex flex-col">
             <h1 class="text-gray-900 dark:text-white text-base font-medium leading-normal">Cheesy Dreams</h1>
-            <p class="text-gray-500 dark:text-gray-400 text-sm font-normal leading-normal">Management System</p>
+            <p class="text-gray-500 dark:text-gray-400 text-sm font-normal leading-normal">Sistema de Gestión</p>
           </div>
         </div>
         <nav class="flex flex-col gap-2 mt-4">
           <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
             href="/manager/dashboard">
             <span class="material-symbols-outlined">dashboard</span>
-            <p class="text-sm font-medium leading-normal">Dashboard</p>
+            <p class="text-sm font-medium leading-normal">Panel Principal</p>
           </a>
           <a class="flex items-center gap-3 px-3 py-2 rounded-lg bg-primary text-gray-900"
             href="/manager/manage_reservations">
             <span class="material-symbols-outlined">book_online</span>
-            <p class="text-sm font-medium leading-normal">Reservations</p>
+            <p class="text-sm font-medium leading-normal">Reservas</p>
           </a>
           <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
             href="/manager/inventory">
             <span class="material-symbols-outlined">inventory_2</span>
-            <p class="text-sm font-medium leading-normal">Inventory</p>
+            <p class="text-sm font-medium leading-normal">Inventario</p>
           </a>
           <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
             href="/manager/sales">
             <span class="material-symbols-outlined">assessment</span>
-            <p class="text-sm font-medium leading-normal">Sales Reports</p>
+            <p class="text-sm font-medium leading-normal">Reportes de Ventas</p>
           </a>
         </nav>
       </div>
@@ -62,110 +63,111 @@
         <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
           href="#" data-not-implemented>
           <span class="material-symbols-outlined">settings</span>
-          <p class="text-sm font-medium leading-normal">Settings</p>
+          <p class="text-sm font-medium leading-normal">Configuración</p>
         </a>
         <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
           href="../logout">
           <span class="material-symbols-outlined">logout</span>
-          <p class="text-sm font-medium leading-normal">Log Out</p>
+          <p class="text-sm font-medium leading-normal">Cerrar Sesión</p>
         </a>
       </div>
     </aside>
 
+    <!-- Main Content -->
     <main class="flex-1 overflow-y-auto">
       <div class="p-8">
+        <!-- Header -->
         <header class="flex flex-wrap items-start justify-between gap-4">
           <div class="flex flex-col gap-2">
-            <h1 class="text-slate-900 dark:text-white text-4xl font-black leading-tight tracking-[-0.033em]">Pending
-              Reservations</h1>
-            <p class="text-slate-500 dark:text-slate-400 text-base font-normal leading-normal">Review and manage
-              incoming reservation requests.</p>
+            <h1 class="text-slate-900 dark:text-white text-4xl font-black leading-tight tracking-[-0.033em]">Reservas Pendientes</h1>
+            <p class="text-slate-500 dark:text-slate-400 text-base font-normal leading-normal">Revise y administre las solicitudes de reserva entrantes.</p>
           </div>
           <div class="flex items-center gap-2">
             <button
               class="flex cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-slate-200 dark:bg-slate-800 text-slate-700 dark:text-slate-300 hover:bg-slate-300 dark:hover:bg-slate-700 text-sm font-bold leading-normal tracking-[0.015em] transition-colors"
               data-not-implemented>
               <span class="material-symbols-outlined mr-2 text-base">filter_list</span>
-              Filter
+              Filtrar
             </button>
             <button
               class="flex cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-slate-200 dark:bg-slate-800 text-slate-700 dark:text-slate-300 hover:bg-slate-300 dark:hover:bg-slate-700 text-sm font-bold leading-normal tracking-[0.015em] transition-colors"
               data-not-implemented>
               <span class="material-symbols-outlined mr-2 text-base">search</span>
-              Search
+              Buscar
             </button>
           </div>
         </header>
 
+        <!-- Reservations Table -->
         <section class="mt-8 rounded-xl bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-800">
           <div class="overflow-x-auto">
             <table class="w-full text-sm text-left text-slate-500 dark:text-slate-400">
               <thead class="text-xs text-slate-700 uppercase bg-slate-50 dark:bg-slate-800 dark:text-slate-400">
                 <tr>
-                  <th class="px-6 py-3" scope="col">Customer Name</th>
-                  <th class="px-6 py-3" scope="col">Date & Time</th>
-                  <th class="px-6 py-3" scope="col">Party Size</th>
-                  <th class="px-6 py-3" scope="col">Special Notes</th>
-                  <th class="px-6 py-3" scope="col">Actions</th>
+                  <th class="px-6 py-3" scope="col">Nombre del Cliente</th>
+                  <th class="px-6 py-3" scope="col">Fecha y Hora</th>
+                  <th class="px-6 py-3" scope="col">Invitados</th>
+                  <th class="px-6 py-3" scope="col">Notas Especiales</th>
+                  <th class="px-6 py-3" scope="col">Acciones</th>
                 </tr>
               </thead>
               <tbody>
                 <tr
                   class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
                   <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Jordan Smith</td>
-                  <td class="px-6 py-4">Oct 26, 7:30 PM</td>
-                  <td class="px-6 py-4">4 guests</td>
-                  <td class="px-6 py-4">Celebrating an anniversary, quiet table.</td>
+                  <td class="px-6 py-4">26 de Oct, 7:30 PM</td>
+                  <td class="px-6 py-4">4 invitados</td>
+                  <td class="px-6 py-4">Celebrando un aniversario, mesa tranquila.</td>
                   <td class="px-6 py-4">
                     <div class="flex gap-2">
                       <button
-                        class="flex h-8 items-center justify-center rounded bg-primary px-3 text-xs font-bold text-gray-900 hover:bg-[#e5b228] transition-colors">Accept</button>
+                        class="flex h-8 items-center justify-center rounded bg-primary px-3 text-xs font-bold text-gray-900 hover:bg-[#e5b228] transition-colors">Aceptar</button>
                       <button
-                        class="flex h-8 items-center justify-center rounded border border-slate-300 dark:border-slate-600 bg-transparent px-3 text-xs font-bold text-slate-600 dark:text-slate-400 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">Decline</button>
+                        class="flex h-8 items-center justify-center rounded border border-slate-300 dark:border-slate-600 bg-transparent px-3 text-xs font-bold text-slate-600 dark:text-slate-400 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">Rechazar</button>
                     </div>
                   </td>
                 </tr>
                 <tr
                   class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
                   <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Alex Johnson</td>
-                  <td class="px-6 py-4">Oct 26, 8:00 PM</td>
-                  <td class="px-6 py-4">2 guests</td>
-                  <td class="px-6 py-4">No special requests.</td>
+                  <td class="px-6 py-4">26 de Oct, 8:00 PM</td>
+                  <td class="px-6 py-4">2 invitados</td>
+                  <td class="px-6 py-4">Sin peticiones especiales.</td>
                   <td class="px-6 py-4">
                     <div class="flex gap-2">
                       <button
-                        class="flex h-8 items-center justify-center rounded bg-primary px-3 text-xs font-bold text-gray-900 hover:bg-[#e5b228] transition-colors">Accept</button>
+                        class="flex h-8 items-center justify-center rounded bg-primary px-3 text-xs font-bold text-gray-900 hover:bg-[#e5b228] transition-colors">Aceptar</button>
                       <button
-                        class="flex h-8 items-center justify-center rounded border border-slate-300 dark:border-slate-600 bg-transparent px-3 text-xs font-bold text-slate-600 dark:text-slate-400 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">Decline</button>
+                        class="flex h-8 items-center justify-center rounded border border-slate-300 dark:border-slate-600 bg-transparent px-3 text-xs font-bold text-slate-600 dark:text-slate-400 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">Rechazar</button>
                     </div>
                   </td>
                 </tr>
                 <tr
                   class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
                   <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Casey Williams</td>
-                  <td class="px-6 py-4">Oct 27, 6:00 PM</td>
-                  <td class="px-6 py-4">6 guests</td>
-                  <td class="px-6 py-4">High-chair needed for a toddler.</td>
+                  <td class="px-6 py-4">27 de Oct, 6:00 PM</td>
+                  <td class="px-6 py-4">6 invitados</td>
+                  <td class="px-6 py-4">Se necesita silla alta para un niño pequeño.</td>
                   <td class="px-6 py-4">
                     <div class="flex gap-2">
                       <button
-                        class="flex h-8 items-center justify-center rounded bg-primary px-3 text-xs font-bold text-gray-900 hover:bg-[#e5b228] transition-colors">Accept</button>
+                        class="flex h-8 items-center justify-center rounded bg-primary px-3 text-xs font-bold text-gray-900 hover:bg-[#e5b228] transition-colors">Aceptar</button>
                       <button
-                        class="flex h-8 items-center justify-center rounded border border-slate-300 dark:border-slate-600 bg-transparent px-3 text-xs font-bold text-slate-600 dark:text-slate-400 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">Decline</button>
+                        class="flex h-8 items-center justify-center rounded border border-slate-300 dark:border-slate-600 bg-transparent px-3 text-xs font-bold text-slate-600 dark:text-slate-400 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">Rechazar</button>
                     </div>
                   </td>
                 </tr>
                 <tr class="bg-white dark:bg-slate-900 hover:bg-slate-50 dark:hover:bg-slate-800/50">
                   <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Taylor Brown</td>
-                  <td class="px-6 py-4">Oct 27, 9:00 PM</td>
-                  <td class="px-6 py-4">3 guests</td>
-                  <td class="px-6 py-4">Gluten allergy in the party.</td>
+                  <td class="px-6 py-4">27 de Oct, 9:00 PM</td>
+                  <td class="px-6 py-4">3 invitados</td>
+                  <td class="px-6 py-4">Alergia al gluten en el grupo.</td>
                   <td class="px-6 py-4">
                     <div class="flex gap-2">
                       <button
-                        class="flex h-8 items-center justify-center rounded bg-primary px-3 text-xs font-bold text-gray-900 hover:bg-[#e5b228] transition-colors">Accept</button>
+                        class="flex h-8 items-center justify-center rounded bg-primary px-3 text-xs font-bold text-gray-900 hover:bg-[#e5b228] transition-colors">Aceptar</button>
                       <button
-                        class="flex h-8 items-center justify-center rounded border border-slate-300 dark:border-slate-600 bg-transparent px-3 text-xs font-bold text-slate-600 dark:text-slate-400 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">Decline</button>
+                        class="flex h-8 items-center justify-center rounded border border-slate-300 dark:border-slate-600 bg-transparent px-3 text-xs font-bold text-slate-600 dark:text-slate-400 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">Rechazar</button>
                     </div>
                   </td>
                 </tr>
@@ -177,89 +179,6 @@
     </main>
   </div>
 
-  <script>
-    (function () {
-      console.log('✅ Script inline cargado');
-
-      const style = document.createElement('style');
-      style.textContent = `
-    .__notimpl_modal_backdrop {
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.5);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-    }
-    .__notimpl_modal {
-      background: white;
-      padding: 24px;
-      border-radius: 12px;
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
-      max-width: 90%;
-      width: 360px;
-      text-align: center;
-      font-family: 'Work Sans', sans-serif;
-    }
-    .__notimpl_modal h2 {
-      margin: 0 0 12px;
-      font-size: 20px;
-      color: #1F2937;
-    }
-    .__notimpl_modal p {
-      margin: 0 0 20px;
-      color: #6B7280;
-      font-size: 14px;
-    }
-    .__notimpl_modal button {
-      padding: 10px 20px;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      background: #fac638;
-      color: white;
-      font-weight: 600;
-    }
-    .__notimpl_modal button:hover {
-      background: #D97706;
-    }
-  `;
-      document.head.appendChild(style);
-
-      function showModal() {
-        if (document.querySelector('.__notimpl_modal_backdrop')) return;
-
-        const backdrop = document.createElement('div');
-        backdrop.className = '__notimpl_modal_backdrop';
-
-        const modal = document.createElement('div');
-        modal.className = '__notimpl_modal';
-        modal.innerHTML = '<h2>Not implemented yet!</h2><p>This functionality is not implemented yet.</p>';
-
-        const closeBtn = document.createElement('button');
-        closeBtn.textContent = 'Cerrar';
-        closeBtn.addEventListener('click', () => backdrop.remove());
-
-        modal.appendChild(closeBtn);
-        backdrop.appendChild(modal);
-        backdrop.addEventListener('click', (e) => {
-          if (e.target === backdrop) backdrop.remove();
-        });
-
-        document.body.appendChild(backdrop);
-      }
-
-      document.addEventListener('click', function (e) {
-        const target = e.target.closest('[data-not-implemented]');
-        if (target) {
-          e.preventDefault();
-          e.stopPropagation();
-          showModal();
-        }
-      }, true);
-    })();
-  </script>
   <script src="../js/functions.js"></script>
 </body>
 
