--- a/app/front/manager/sales_reports_page.html
+++ b/app/front/manager/sales_reports_page.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
-<html class="" lang="en">
+<html class="" lang="es">
 
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Sales Reports - Cheesy Dreams</title>
+  <title>Reportes de Ventas - Cheesy Dreams</title>
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&amp;display=swap"
     rel="stylesheet" />
@@ -24,6 +24,7 @@
 
 <body class="font-display bg-background-light dark:bg-background-dark">
   <div class="flex min-h-screen w-full">
+    <!-- Side Navigation -->
     <aside
       class="flex h-screen w-64 flex-col bg-white dark:bg-gray-900 p-4 sticky top-0 border-r border-gray-200 dark:border-gray-700">
       <div class="flex flex-col gap-4">
@@ -33,28 +34,28 @@
           </div>
           <div class="flex flex-col">
             <h1 class="text-gray-900 dark:text-white text-base font-medium leading-normal">Cheesy Dreams</h1>
-            <p class="text-gray-500 dark:text-gray-400 text-sm font-normal leading-normal">Management System</p>
+            <p class="text-gray-500 dark:text-gray-400 text-sm font-normal leading-normal">Sistema de Gestión</p>
           </div>
         </div>
         <nav class="flex flex-col gap-2 mt-4">
           <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
             href="/manager/dashboard">
             <span class="material-symbols-outlined">dashboard</span>
-            <p class="text-sm font-medium leading-normal">Dashboard</p>
+            <p class="text-sm font-medium leading-normal">Panel Principal</p>
           </a>
           <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
             href="/manager/manage_reservations">
             <span class="material-symbols-outlined">book_online</span>
-            <p class="text-sm font-medium leading-normal">Reservations</p>
+            <p class="text-sm font-medium leading-normal">Reservas</p>
           </a>
           <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
             href="/manager/inventory">
             <span class="material-symbols-outlined">inventory_2</span>
-            <p class="text-sm font-medium leading-normal">Inventory</p>
+            <p class="text-sm font-medium leading-normal">Inventario</p>
           </a>
           <a class="flex items-center gap-3 px-3 py-2 rounded-lg bg-primary text-gray-900" href="/manager/sales">
             <span class="material-symbols-outlined">assessment</span>
-            <p class="text-sm font-medium leading-normal">Sales Reports</p>
+            <p class="text-sm font-medium leading-normal">Reportes de Ventas</p>
           </a>
         </nav>
       </div>
@@ -62,106 +63,107 @@
         <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
           href="#" data-not-implemented>
           <span class="material-symbols-outlined">settings</span>
-          <p class="text-sm font-medium leading-normal">Settings</p>
+          <p class="text-sm font-medium leading-normal">Configuración</p>
         </a>
         <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
           href="../logout">
           <span class="material-symbols-outlined">logout</span>
-          <p class="text-sm font-medium leading-normal">Log Out</p>
+          <p class="text-sm font-medium leading-normal">Cerrar Sesión</p>
         </a>
       </div>
     </aside>
+    <!-- Main Content -->
     <main class="flex-1 overflow-y-auto">
       <div class="p-8">
+        <!-- Header -->
         <header class="flex flex-wrap items-start justify-between gap-4">
           <div class="flex flex-col gap-2">
-            <h1 class="text-slate-900 dark:text-white text-4xl font-black leading-tight tracking-[-0.033em]">Sales
-              Reports</h1>
-            <p class="text-slate-500 dark:text-slate-400 text-base font-normal leading-normal">Key sales metrics for
-              today.</p>
+            <h1 class="text-slate-900 dark:text-white text-4xl font-black leading-tight tracking-[-0.033em]">Reportes de Ventas</h1>
+            <p class="text-slate-500 dark:text-slate-400 text-base font-normal leading-normal">Métricas de ventas clave para hoy.</p>
           </div>
           <div class="flex items-center gap-2">
             <button
               class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-slate-200 dark:bg-slate-800 text-slate-700 dark:text-slate-300 hover:bg-slate-300 dark:hover:bg-slate-700 text-sm font-bold leading-normal tracking-[0.015em] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary"
               data-not-implemented>
               <span class="material-symbols-outlined mr-2">calendar_today</span>
-              <span class="truncate">Oct 26, 2023</span>
+              <span class="truncate">9 de diciembre de 2025</span>
             </button>
           </div>
         </header>
+        <!-- Key Metrics -->
         <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
           <div
             class="flex flex-col gap-2 rounded-xl p-6 bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-800">
-            <p class="text-slate-600 dark:text-slate-400 text-base font-medium leading-normal">Total Daily Sales</p>
-            <p class="text-slate-900 dark:text-white tracking-tight text-4xl font-bold leading-tight">$2,345.50</p>
+            <p class="text-slate-600 dark:text-slate-400 text-base font-medium leading-normal">Ventas Diarias Totales</p>
+            <p class="text-slate-900 dark:text-white tracking-tight text-4xl font-bold leading-tight">2.345,50 €</p>
             <p class="text-green-500 dark:text-green-400 text-sm font-medium leading-normal flex items-center"><span
-                class="material-symbols-outlined text-base">arrow_upward</span>5.2% vs yesterday</p>
+                class="material-symbols-outlined text-base">arrow_upward</span>5.2% vs ayer</p>
           </div>
           <div
             class="flex flex-col gap-2 rounded-xl p-6 bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-800">
-            <p class="text-slate-600 dark:text-slate-400 text-base font-medium leading-normal">Total Orders</p>
+            <p class="text-slate-600 dark:text-slate-400 text-base font-medium leading-normal">Total de Pedidos</p>
             <p class="text-slate-900 dark:text-white tracking-tight text-4xl font-bold leading-tight">156</p>
             <p class="text-green-500 dark:text-green-400 text-sm font-medium leading-normal flex items-center"><span
-                class="material-symbols-outlined text-base">arrow_upward</span>2.1% vs yesterday</p>
+                class="material-symbols-outlined text-base">arrow_upward</span>2.1% vs ayer</p>
           </div>
           <div
             class="flex flex-col gap-2 rounded-xl p-6 bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-800">
-            <p class="text-slate-600 dark:text-slate-400 text-base font-medium leading-normal">Average Order Value</p>
-            <p class="text-slate-900 dark:text-white tracking-tight text-4xl font-bold leading-tight">$15.04</p>
+            <p class="text-slate-600 dark:text-slate-400 text-base font-medium leading-normal">Valor Promedio del Pedido</p>
+            <p class="text-slate-900 dark:text-white tracking-tight text-4xl font-bold leading-tight">15,04 €</p>
             <p class="text-red-500 dark:text-red-400 text-sm font-medium leading-normal flex items-center"><span
-                class="material-symbols-outlined text-base">arrow_downward</span>0.5% vs yesterday</p>
+                class="material-symbols-outlined text-base">arrow_downward</span>0.5% vs ayer</p>
           </div>
         </section>
+        <!-- Popular Dishes Table -->
         <section class="mt-6 rounded-xl bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-800">
           <div class="p-6">
-            <h3 class="text-lg font-semibold text-slate-900 dark:text-white">Popular Dishes Today</h3>
+            <h3 class="text-lg font-semibold text-slate-900 dark:text-white">Platos Populares Hoy</h3>
           </div>
           <div class="overflow-x-auto">
             <table class="w-full text-sm text-left text-slate-500 dark:text-slate-400">
               <thead class="text-xs text-slate-700 uppercase bg-slate-50 dark:bg-slate-800 dark:text-slate-400">
                 <tr>
-                  <th class="px-6 py-3" scope="col">Dish Name</th>
-                  <th class="px-6 py-3" scope="col">Category</th>
-                  <th class="px-6 py-3" scope="col">Units Sold</th>
-                  <th class="px-6 py-3 text-right" scope="col">Total Revenue</th>
+                  <th class="px-6 py-3" scope="col">Nombre del Plato</th>
+                  <th class="px-6 py-3" scope="col">Categoría</th>
+                  <th class="px-6 py-3" scope="col">Unidades Vendidas</th>
+                  <th class="px-6 py-3 text-right" scope="col">Ingresos Totales</th>
                 </tr>
               </thead>
               <tbody>
                 <tr
                   class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-                  <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Classic Burger</td>
-                  <td class="px-6 py-4">Main Course</td>
+                  <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Hamburguesa Clásica</td>
+                  <td class="px-6 py-4">Plato Principal</td>
                   <td class="px-6 py-4">48</td>
-                  <td class="px-6 py-4 text-right">$576.00</td>
+                  <td class="px-6 py-4 text-right">576,00 €</td>
                 </tr>
                 <tr
                   class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-                  <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Cheesy Fries</td>
-                  <td class="px-6 py-4">Sides</td>
+                  <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Papas con Queso</td>
+                  <td class="px-6 py-4">Acompañamientos</td>
                   <td class="px-6 py-4">62</td>
-                  <td class="px-6 py-4 text-right">$310.00</td>
+                  <td class="px-6 py-4 text-right">310,00 €</td>
                 </tr>
                 <tr
                   class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-                  <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Vanilla Milkshake
+                  <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Batido de Vainilla
                   </td>
-                  <td class="px-6 py-4">Drinks</td>
+                  <td class="px-6 py-4">Bebidas</td>
                   <td class="px-6 py-4">35</td>
-                  <td class="px-6 py-4 text-right">$210.00</td>
+                  <td class="px-6 py-4 text-right">210,00 €</td>
                 </tr>
                 <tr
                   class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-                  <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Caesar Salad</td>
-                  <td class="px-6 py-4">Salads</td>
+                  <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Ensalada César</td>
+                  <td class="px-6 py-4">Ensaladas</td>
                   <td class="px-6 py-4">25</td>
-                  <td class="px-6 py-4 text-right">$225.00</td>
+                  <td class="px-6 py-4 text-right">225,00 €</td>
                 </tr>
                 <tr class="bg-white dark:bg-slate-900 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-                  <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Pepperoni Pizza
-                    Slice</td>
-                  <td class="px-6 py-4">Main Course</td>
+                  <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Rebanada de Pizza Pepperoni</td>
+                  <td class="px-6 py-4">Plato Principal</td>
                   <td class="px-6 py-4">40</td>
-                  <td class="px-6 py-4 text-right">$200.00</td>
+                  <td class="px-6 py-4 text-right">200,00 €</td>
                 </tr>
               </tbody>
             </table>
@@ -171,98 +173,6 @@
     </main>
   </div>
 
-
-  <script>
-    // popup.js inline - temporal para debugging
-    (function () {
-      console.log('✅ Script inline cargado');
-
-      const style = document.createElement('style');
-      style.textContent = `
-    .__notimpl_modal_backdrop {
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.5);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-    }
-    .__notimpl_modal {
-      background: white;
-      padding: 24px;
-      border-radius: 12px;
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
-      max-width: 90%;
-      width: 360px;
-      text-align: center;
-      font-family: 'Work Sans', sans-serif;
-    }
-    .__notimpl_modal h2 {
-      margin: 0 0 12px;
-      font-size: 20px;
-      color: #1F2937;
-    }
-    .__notimpl_modal p {
-      margin: 0 0 20px;
-      color: #6B7280;
-      font-size: 14px;
-    }
-    .__notimpl_modal button {
-      padding: 10px 20px;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      background: #fac638;
-      color: white;
-      font-weight: 600;
-    }
-    .__notimpl_modal button:hover {
-      background: #D97706;
-    }
-  `;
-      document.head.appendChild(style);
-
-      function showModal() {
-        console.log('🎉 Mostrando modal');
-        if (document.querySelector('.__notimpl_modal_backdrop')) return;
-
-        const backdrop = document.createElement('div');
-        backdrop.className = '__notimpl_modal_backdrop';
-
-        const modal = document.createElement('div');
-        modal.className = '__notimpl_modal';
-        modal.innerHTML = '<h2>Not implemented yet!</h2><p>This functionality is not implemented yet.</p>';
-
-        const closeBtn = document.createElement('button');
-        closeBtn.textContent = 'Cerrar';
-        closeBtn.addEventListener('click', () => backdrop.remove());
-
-        modal.appendChild(closeBtn);
-        backdrop.appendChild(modal);
-        backdrop.addEventListener('click', (e) => {
-          if (e.target === backdrop) backdrop.remove();
-        });
-
-        document.body.appendChild(backdrop);
-      }
-
-      document.addEventListener('click', function (e) {
-        console.log('👆 Clic en:', e.target.tagName);
-        const target = e.target.closest('[data-not-implemented]');
-        console.log('🔍 Target:', target);
-
-        if (target) {
-          console.log('✋ Previniendo default');
-          e.preventDefault();
-          e.stopPropagation();
-          showModal();
-        }
-      }, true);
-
-      console.log('✅ Event listener configurado');
-    })();
-  </script>
   <script src="../js/functions.js"></script>
 </body>
 
