--- a/app/front/staff/check.html
+++ b/app/front/staff/check.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html class="" lang="en">
+<html class="" lang="es">
 
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Cheesy Dreams - Staff Time Clock</title>
+  <title>Cheesy Dreams - Reloj del Personal</title>
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   <link href="https://fonts.googleapis.com" rel="preconnect" />
   <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
@@ -155,7 +155,7 @@
         <h2 class="text-xl font-bold">Cheesy Dreams</h2>
       </div>
       <div class="flex flex-1 items-center justify-end gap-4">
-        <span class="hidden sm:inline text-right text-charcoal dark:text-gray-300">Welcome, <span
+        <span class="hidden sm:inline text-right text-charcoal dark:text-gray-300">Bienvenido/a, <span
             class="font-semibold">Jane Doe</span></span>
         <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10"
           data-alt="A profile picture of Jane Doe"
@@ -166,18 +166,18 @@
     <main class="flex flex-1 flex-col items-center justify-center p-4 text-center">
       <h1
         class="text-charcoal dark:text-white tracking-tight text-3xl md:text-4xl font-bold leading-tight px-4 pb-2 pt-6">
-        Tuesday, August 20, 2024 | 09:01:15 AM</h1>
+        Martes, 20 de Agosto de 2024 | 09:01:15 AM</h1>
       <div class="flex justify-center items-center gap-2 pb-4 pt-2 px-4">
-        <span class="text-gray-600 dark:text-gray-400 text-base font-normal">Status:</span>
+        <span class="text-gray-600 dark:text-gray-400 text-base font-normal">Estado:</span>
         <span
           class="inline-flex items-center gap-1.5 rounded-full bg-inactive/10 dark:bg-inactive/20 px-3 py-1 text-sm font-semibold text-inactive dark:text-gray-300">
           <span class="size-2 rounded-full bg-inactive"></span>
-          Checked Out
+          Salida registrada
         </span>
       </div>
       <p
         class="text-gray-700 dark:text-gray-300 text-lg font-normal leading-normal pb-6 pt-1 px-4 text-center max-w-2xl">
-        Please check in to start your shift.</p>
+        Por favor, registre su entrada para comenzar su turno.</p>
       <div class="flex flex-col sm:flex-row w-full justify-center gap-4 px-4 py-3 max-w-lg">
         <button
           class="flex flex-1 min-w-[84px] cursor-pointer items-center justify-center gap-2 overflow-hidden rounded-lg h-14 px-5 bg-primary text-charcoal text-lg font-bold leading-normal transition-transform duration-200 hover:scale-105 focus:outline-none focus:ring-4 focus:ring-primary/50">
@@ -201,9 +201,9 @@
         <div class="mx-auto flex h-16 w-16 items-center justify-center rounded-full bg-success/10 text-success mb-4">
           <span class="material-symbols-outlined !text-4xl">task_alt</span>
         </div>
-        <h2 class="text-2xl font-bold text-charcoal dark:text-white mb-2">Checked In!</h2>
-        <p class="text-gray-600 dark:text-gray-300 mb-6">You successfully checked in at <strong>9:02:15 AM</strong>.
-          Have a great shift!</p>
+        <h2 class="text-2xl font-bold text-charcoal dark:text-white mb-2">¡Entrada Registrada!</h2>
+        <p class="text-gray-600 dark:text-gray-300 mb-6">Ha registrado su entrada exitosamente a las <strong>9:02:15 AM</strong>.
+          ¡Que tenga un gran turno!</p>
         <button
           class="w-full flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-primary text-charcoal text-base font-bold leading-normal tracking-[0.015em] hover:opacity-90 focus:outline-none focus:ring-4 focus:ring-primary/50">
           <span class="truncate">OK</span>
@@ -214,7 +214,7 @@
 
   <div class="fixed bottom-4 right-4 z-50">
     <button id="accessibility-trigger" type="button" aria-controls="accessibility-menu" aria-expanded="false"
-      aria-label="Open Accessibility Options"
+      aria-label="Abrir opciones de accesibilidad"
       class="flex h-14 w-14 items-center justify-center rounded-full bg-primary text-black shadow-lg transition-transform hover:scale-110 focus:outline-none focus:ring-4 focus:ring-primary/50">
       <span class="material-symbols-outlined !text-3xl">accessibility_new</span>
     </button>
@@ -224,14 +224,13 @@
 
       <div class="border-b border-gray-200 pb-2 mb-4 dark:border-gray-700">
         <h3 id="accessibility-heading" class="text-lg font-bold text-gray-900 dark:text-white">
-          Accessibility Settings
+          Configuración de Accesibilidad
         </h3>
       </div>
 
       <div class="space-y-4 h-80 overflow-y-auto pr-1 custom-scrollbar">
         <div class="space-y-2">
-          <label class="text-sm font-medium text-gray-600 dark:text-gray-400" for="font-size">Text
-            Size</label>
+          <label class="text-sm font-medium text-gray-600 dark:text-gray-400" for="font-size">Tamaño del Texto</label>
           <div class="flex items-center gap-2">
             <span class="text-xs text-gray-600 dark:text-gray-400">A</span>
             <input id="font-size" type="range" min="100" max="180" step="10" value="100"
@@ -241,88 +240,88 @@
         </div>
 
         <div class="space-y-2">
-          <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Contrast Theme</p>
+          <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Tema de Contraste</p>
           <div class="grid grid-cols-4 gap-2">
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-white" data-contrast="black-on-white"
-              data-fg="#000000" data-bg="#ffffff" title="Black on White"
-              aria-label="Black text on White background"></button>
+              data-fg="#000000" data-bg="#ffffff" title="Negro sobre Blanco"
+              aria-label="Texto negro sobre fondo blanco"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-black" data-contrast="white-on-black"
-              data-fg="#ffffff" data-bg="#000000" title="White on Black"
-              aria-label="White text on Black background"></button>
+              data-fg="#ffffff" data-bg="#000000" title="Blanco sobre Negro"
+              aria-label="Texto blanco sobre fondo negro"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-yellow-400" data-contrast="yellow-on-blue"
-              data-fg="#facc15" data-bg="#020617" title="Yellow on Blue"
-              aria-label="Yellow text on Dark Blue background"></button>
+              data-fg="#facc15" data-bg="#020617" title="Amarillo sobre Azul"
+              aria-label="Texto amarillo sobre fondo azul oscuro"></button>
 
             <button class="h-8 w-8 rounded-full border-2 border-gray-300 bg-blue-600" data-contrast="blue-on-white"
-              data-fg="#2563eb" data-bg="#ffffff" title="Blue on White"
-              aria-label="Blue text on White background"></button>
+              data-fg="#2563eb" data-bg="#ffffff" title="Azul sobre Blanco"
+              aria-label="Texto azul sobre fondo blanco"></button>
           </div>
         </div>
 
         <div class="space-y-3 pt-2 border-t border-gray-200 dark:border-gray-700">
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Grayscale</p>
+            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Escala de Grises</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="grayscale-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary" />
-              <span class="text-xs text-gray-600 dark:text-gray-400">On</span>
+              <span class="text-xs text-gray-600 dark:text-gray-400">Activado</span>
             </label>
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Text Spacing</p>
+            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Espaciado de Texto</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="spacing-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary" />
-              <span class="text-xs text-gray-600 dark:text-gray-400">On</span>
+              <span class="text-xs text-gray-600 dark:text-gray-400">Activado</span>
             </label>
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Dyslexia Font</p>
+            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Fuente para Dislexia</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="dyslexia-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary" />
-              <span class="text-xs text-gray-600 dark:text-gray-400">On</span>
+              <span class="text-xs text-gray-600 dark:text-gray-400">Activado</span>
             </label>
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Big Cursor</p>
+            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Cursor Grande</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="cursor-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary" />
-              <span class="text-xs text-gray-600 dark:text-gray-400">On</span>
+              <span class="text-xs text-gray-600 dark:text-gray-400">Activado</span>
             </label>
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Highlight Links</p>
+            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Resaltar Enlaces</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="links-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary" />
-              <span class="text-xs text-gray-600 dark:text-gray-400">On</span>
+              <span class="text-xs text-gray-600 dark:text-gray-400">Activado</span>
             </label>
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Reading Guide</p>
+            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Guía de Lectura</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="reading-guide-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary" />
-              <span class="text-xs text-gray-600 dark:text-gray-400">On</span>
+              <span class="text-xs text-gray-600 dark:text-gray-400">Activado</span>
             </label>
           </div>
 
           <div class="flex items-center justify-between">
-            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Pause Animations</p>
+            <p class="text-sm font-medium text-gray-600 dark:text-gray-400">Pausar Animaciones</p>
             <label class="inline-flex items-center gap-2 cursor-pointer">
               <input id="animation-toggle" type="checkbox"
                 class="rounded border-gray-300 text-primary focus:ring-primary" />
-              <span class="text-xs text-gray-600 dark:text-gray-400">On</span>
+              <span class="text-xs text-gray-600 dark:text-gray-400">Activado</span>
             </label>
           </div>
 
@@ -332,7 +331,7 @@
       <div class="mt-4 border-t border-gray-200 pt-3 dark:border-gray-700">
         <button id="a11y-reset"
           class="w-full text-center text-sm font-bold text-primary hover:text-yellow-600 hover:underline">
-          Reset Settings
+          Restablecer Configuración
         </button>
       </div>
     </div>
@@ -395,7 +394,7 @@
 
         const modal = document.createElement('div');
         modal.className = '__notimpl_modal';
-        modal.innerHTML = '<h2>Not implemented yet!</h2><p>This functionality is not implemented yet.</p>';
+        modal.innerHTML = '<h2>¡Aún no implementado!</h2><p>Esta funcionalidad aún no está implementada.</p>';
 
         const closeBtn = document.createElement('button');
         closeBtn.textContent = 'Cerrar';
@@ -595,7 +594,7 @@
       localStorage.setItem('staffStatus', 'checkin');
     }
   </script>
-  <script src="../js/functions.js">  <script src="../js/functions.js"></script>
+  <script src="../js/functions.js"></script>
 </body>
 
 </html>
